Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I917e19b5e146ac8415ba6a302e8ea721b7e1c0e2

--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"በአቅራቢያ ያሉ የመሣሪያዎች ፈቃድ ያላቸው መተግበሪያዎች የተገናኙ መሣሪያዎችን አንጻራዊ አቀማመጥ ማወቅ ይችላሉ።"</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"ለመተግበሪያዎች እና ለአገልግሎቶች የአካባቢ መዳረሻ ጠፍቷል። ወደ የአደጋ ጊዜ ቁጥር ሲደውሉ ወይም የጽሑፍ መልዕክት ሲልኩ የመሣሪያዎ አካባቢ አሁንም ወደ የድንገተኛ ጊዜ አደጋ ምላሽ ሰጪዎች ሊላክ ይችላል።"</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"ስለ የአካባቢ ቅንብሮች የበለጠ ይወቁ"</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"የአካባቢ መዳረሻን ለመቀየር ወደ ቅንብሮች &gt; ደህንነት እና ግላዊነት &gt; የግላዊነት መቆጣጠሪያዎች ይሂዱ"</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"መለያዎች"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"ደህንነት"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"ምስጠራ እና ምስክርነቶች"</string>
@@ -2017,7 +2018,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"የቀለም ንጽጽር"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"ከፍተኛ ንፅፅር ጽሑፍን፣ አዝራሮችን እና አዶዎችን የበለጠ ጎልቶ እንዲታዩ ያደርጋል። ለእርስዎ የሚስማማውን ንፅፅር ይምረጡ።"</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"አንዳንድ መተግበሪያዎች ሁሉንም የቀለም እና የጽሑፍ ንፅፅር ቅንብሮችን ላይደግፉ ይችላሉ"</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"ቀለሞች እና ጽሁፍ ከማያ ገጽዎ ጀርባ ቀለም አንጻር እንዴት እንደሚመስሉ ያስተካክሉ"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"ቅድመ-ዕይታ"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"ሄለን፣ አዳም"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"ከ2 ቀኖች በፊት"</string>
@@ -2174,7 +2174,7 @@
     <string name="accessibility_button_intro" msgid="2601976470525277903">"የተደራሽነት አዝራርን መጠቀም። የእጅ ምልክቱ በባለ3-አዝራር ዳሰሳ አይገኝም።"</string>
     <string name="accessibility_button_summary" msgid="8510939012631455831">"የተደራሽነት ባህሪያትን በፍጥነት ይድረሱባቸው"</string>
     <string name="accessibility_button_gesture_description" msgid="1141723096904904336">"&lt;b&gt;ለመጀመር&lt;/b&gt;&lt;br/&gt; {0፣ቁጥር፣ኢንቲጀር}። ወደ የተደራሽነት ቅንብሮች&lt;br/&gt; {1፣ቁጥር፣ኢንቲጀር} ይሂዱ። ባህሪን ይምረጡ እና አቋራጩን&lt;br/&gt; {2፣ቁጥር፣ኢንቲጀር} መታ ያድርጉ። ባህሪውን ለመድረስ አዝራርን ወይም ምልክትን ለመጠቀም ይፈልጉ እንደሆነ ይምረጡ&lt;br/&gt;"</string>
-    <string name="accessibility_button_description" msgid="7669538706120092399">"&lt;b&gt;ለመጀመር&lt;/b&gt;&lt;br/&gt; {0፣ቁጥር፣ኢንቲጀር}። ወደ የተደራሽነት ቅንብሮች&lt;br/&gt; {1፣ቁጥር፣ኢንቲጀር} ይሂዱ። ባህሪን ይምረጡ እና አቋራጩን&lt;br/&gt; {2፣ቁጥር፣ኢንቲጀር} መታ ያድርጉ። ባህሪውን ለመድረስ አዝራሩን ይምረጡ&lt;br/&gt;"</string>
+    <string name="accessibility_button_description" msgid="7669538706120092399">"&lt;b&gt;ለመጀመር&lt;/b&gt;&lt;br/&gt; {0,number,integer}። ወደ የተደራሽነት ቅንብሮች&lt;br/&gt; {1,number,integer} ይሂዱ። ባህሪን ይምረጡ እና አቋራጩን&lt;br/&gt; {2,number,integer} መታ ያድርጉ። ባህሪውን ለመድረስ አዝራሩን ይምረጡ&lt;br/&gt;"</string>
     <string name="accessibility_button_or_gesture_title" msgid="3510075963401163529">"አዝራርን ወይም የእጅ ምልክትን ይጠቀሙ"</string>
     <string name="accessibility_button_location_title" msgid="7182107846092304942">"አካባቢ"</string>
     <string name="accessibility_button_size_title" msgid="5785110470538960881">"መጠን"</string>
@@ -4990,8 +4990,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"UWBን ለመጠቀም የአውሮፕላን ሁነታን ያጥፉ"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"UWB በአሁኑ አካባቢ አይገኝም"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"ተከታታይ"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"እንከን ለሌለው የዘመናዊ ቤት ተሞክሮ ተከታታይን በመጠቀም ከተኳዃኝ መሣሪያዎች ጋር ይገናኙ"</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"ተከታታይን ለመጠቀም የአውሮፕላን ሁነታን ያጥፉ"</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"የካሜራ መዳረሻ"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"የማይክሮፎን መዳረሻ"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"ለመተግበሪያዎች እና አገልግሎቶች"</string>
