--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"নিকটৱৰ্তী ডিভাইচৰ সৈতে যোগাযোগ কৰিব পৰাৰ অনুমতি থকা এপ্‌সমূহে সংযুক্ত হৈ থকা ডিভাইচৰ আপেক্ষিক স্থান নিৰ্ধাৰণ কৰিব পাৰে।"</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"এপ্‌ আৰু সেৱাৰ বাবে অৱস্থানৰ এক্সেছ অফ কৰা আছে। আপুনি কোনো জৰুৰীকালীন নম্বৰলৈ কল কৰিলে অথবা বাৰ্তা পঠিয়ালে আপোনাৰ ডিভাইচৰ অৱস্থান তথাপি জৰুৰীকালীন পৰিস্থিতিত সঁহাৰি দিয়া লোকলৈ পঠিওৱা হ’ব পাৰে।"</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"অৱস্থানৰ ছেটিঙৰ বিষয়ে অধিক জানক"</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"অৱস্থানৰ এক্সেছ সলাবলৈ, ছেটিং &gt; সুৰক্ষা আৰু গোপনীয়তা &gt; গোপনীয়তাৰ নিয়ন্ত্ৰণলৈ যাওক"</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"একাউণ্টসমূহ"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"সুৰক্ষা"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"এনক্ৰিপশ্বন আৰু ক্ৰিডেনশ্বিয়েল"</string>
@@ -2017,7 +2018,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"ৰঙৰ কনট্ৰাষ্ট"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"উচ্চ কনট্ৰাষ্টে পাঠ, বুটাম আৰু চিহ্নসমূহক অধিক জিলিকাই ৰাখে। আপোনাৰ বাবে যিটো কনট্ৰাষ্ট আটাইতকৈ ভাল লাগে সেইটো বাছনি কৰক।"</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"কিছুমান এপে আটাইবোৰ ৰং আৰু পাঠৰ কনট্ৰাষ্টৰ ছেটিং সমৰ্থন নকৰিবও পাৰে"</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"আপোনাৰ স্ক্ৰীনৰ পটভূমিৰ ৰঙৰ বিপৰীতে ৰং আৰু পাঠ কেনেকুৱা দেখা যায় সেইটো মিলাওক"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"পূৰ্বদৰ্শন কৰক"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"হেলেন, এডাম"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"২ দিন পূৰ্বে"</string>
@@ -4990,8 +4990,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"UWB ব্যৱহাৰ কৰিবলৈ এয়াৰপ্লেন ম’ডটো অফ কৰক"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"বৰ্তমানৰ অৱস্থানত UWB উপলব্ধ নহয়"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"থ্ৰেড"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"স্মাৰ্ট হ’মৰ বাধাহীন অভিজ্ঞতা লাভ কৰিবলৈ থ্ৰেড ব্যৱহাৰ কৰি সমিল ডিভাইচসমূহৰ সৈতে সংযোগ কৰক"</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"থ্ৰেড ব্যৱহাৰ কৰিবলৈ এয়াৰপ্লেন ম’ডটো অফ কৰক"</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"কেমেৰাৰ এক্সেছ"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"মাইক্ৰ’ফ’নৰ এক্সেছ"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"এপ্‌ আৰু সেৱাৰ বাবে"</string>
