--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"\"Yaxınlıqdakı cihazlar\" icazəsi olan tətbiqlər qoşulmuş cihazların nisbi mövqeyini təyin edə bilər."</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"Tətbiqlər və xidmətlər üçün məkan girişi deaktivdir. Təcili yardım nömrəsinə zəng etdikdə və ya mesaj göndərdikdə cihazınızın məkanı hələ də təcili yardım əməkdaşlarına göndərilə bilər."</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"Məkan ayarları haqqında ətraflı məlumat"</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"Məkana girişi dəyişin: Ayarlar &gt; Güvənlik və məxfilik &gt; Məxfilik nizamlayıcıları"</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"Hesablar"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"Güvənlik"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"Şifrələmə və kimlik bilgiləri"</string>
@@ -2017,7 +2018,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Rəng kontrastı"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Yüksək kontrast mətn, düymələr və ikonaları fərqləndirir. Ən yaxşı görünən kontrastı seçin."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Bəzi tətbiqlər bütün rəng və mətn kontrastı ayarlarını dəstəkləməyə bilər"</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"Rənglər və mətni ekranda fərqləndirin"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"Önizləyin"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Helen, Adam"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"2 gün əvvəl"</string>
@@ -4990,8 +4990,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"UWB istifadə etmək üçün təyyarə rejimini deaktiv edin"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"UWB cari məkanda əlçatan deyil"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"Thread"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"Qüsursuz smart ev təcrübəsi üçün Thread ilə uyğun cihazlara qoşulun"</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"Thread istifadəsi üçün təyyarə rejimini deaktiv edin"</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"Kameraya giriş"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"Mikrofona giriş"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Tətbiqlər və xidmətlər üçün"</string>
