--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"برنامه‌هایی که اجازه «دستگاه‌های اطراف» را دارند می‌توانند موقعیت نسبی دستگاه‌های متصل را مشخص کنند."</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"دسترسی به مکان برای برنامه‌ها و سرویس‌ها خاموش است. وقتی با شماره تلفن اضطراری تماس می‌گیرید یا به آن پیامک ارسال می‌کنید، ممکن است مکان دستگاهتان همچنان برای مسئولان خدمات اضطراری ارسال شود."</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"درباره «تنظیمات مکان» بیشتر بدانید"</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"برای تغییر دسترسی به مکان، به «تنظیمات &gt; امنیت و حریم خصوصی &gt; تنظیمات حریم خصوصی» بروید"</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"حساب‌ها"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"امنیت"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"رمزگذاری و اطلاعات اعتباری"</string>
@@ -2017,7 +2018,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"کنتراست رنگ"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"کنتراست بیشتر باعث می‌شود متن، دکمه‌ها، و نمادها بیشتر برجسته شوند. کنتراستی را انتخاب کنید که به‌نظرتان بهترین است."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"ممکن است برخی‌از برنامه‌ها از همه تنظیمات کنتراست رنگ و متن پشتیبانی نکنند"</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"رنگ‌ها و متن را در برابر رنگ پس‌زمینه صفحه‌نمایشتان تنظیم کنید"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"پیش‌نمایش"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"هلن و آدام"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"۲ روز پیش"</string>
@@ -4007,7 +4007,7 @@
     <string name="camera_gesture_desc" msgid="7557645057320805328">"با دو بار چرخاندن مچتان، برنامه دوربین را باز کنید"</string>
     <string name="screen_zoom_title" msgid="6928045302654960559">"اندازه نمایش"</string>
     <string name="screen_zoom_short_summary" msgid="756254364808639194">"همه چیز را بزرگ‌تر یا کوچک‌تر می‌کند"</string>
-    <string name="screen_zoom_keywords" msgid="5964023524422386592">"تراکم نمایشگر، بزرگ‌نمایی صفحه، مقیاس، مقیاس‌بندی"</string>
+    <string name="screen_zoom_keywords" msgid="5964023524422386592">"تراکم نمایش، بزرگ‌نمایی صفحه، مقیاس، مقیاس‌بندی"</string>
     <string name="screen_zoom_preview_title" msgid="5288355628444562735">"پیش‌نمایش"</string>
     <string name="screen_zoom_make_smaller_desc" msgid="2628662648068995971">"کوچک‌تر ببینید"</string>
     <string name="screen_zoom_make_larger_desc" msgid="7268794713428853139">"بزرگ‌تر ببینید"</string>
@@ -4990,8 +4990,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"برای استفاده از باند فوق‌وسیع، «حالت هواپیما» را خاموش کنید"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"باند فوق‌وسیع در مکان کنونی دردسترس نیست"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"Thread"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"‏برای داشتن تجربه‌ای یکپارچه در خانه هوشمند، بااستفاده از Thread به دستگاه‌های سازگار متصل شوید"</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"‏برای استفاده از Thread، «حالت هواپیما» را خاموش کنید"</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"دسترسی به دوربین"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"دسترسی میکروفون"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"برای برنامه‌ها و سرویس‌ها"</string>
