--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"កម្មវិធីដែលមានការអនុញ្ញាត​ឱ្យប្រើឧបករណ៍នៅជិត​អាចកំណត់​ចម្ងាយពាក់ព័ន្ធ​នៃឧបករណ៍​ដែលបានភ្ជាប់។"</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"ការចូលប្រើ​ទីតាំងត្រូវបានបិទ​សម្រាប់​កម្មវិធី និងសេវាកម្ម។ ទីតាំងឧបករណ៍របស់អ្នកនៅតែអាចត្រូវបានផ្ញើទៅអ្នកសង្គ្រោះបន្ទាន់ដដែល នៅពេលដែលអ្នកហៅទូរសព្ទ ឬផ្ញើសារជាអក្សរទៅលេខសង្គ្រោះបន្ទាន់។"</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"ស្វែងយល់បន្ថែម​អំពី​ការកំណត់​ទីតាំង"</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"ដើម្បីផ្លាស់ប្ដូរសិទ្ធិចូលប្រើទីតាំង សូមចូលទៅកាន់ការកំណត់ &gt; សុវត្ថិភាព និងឯកជនភាព &gt; ការគ្រប់គ្រងឯកជនភាព"</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"គណនី"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"សុវត្ថិភាព"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"ការ​អ៊ីនគ្រីប និងព័ត៌មានផ្ទៀងផ្ទាត់"</string>
@@ -2017,7 +2018,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"កម្រិតរំលេចពណ៌"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"កម្រិតពណ៌កាន់តែខ្ពស់ធ្វើឱ្យអក្សរ ប៊ូតុង និងរូបតំណាងកាន់តែលេចធ្លោ។ សូមជ្រើសរើសកម្រិតពណ៌ដែលមើលទៅល្អបំផុតសម្រាប់អ្នក។"</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"កម្មវិធីមួយចំនួនប្រហែលជាមិនអាចប្រើការកំណត់កម្រិតពណ៌ និងកម្រិតពណ៌អក្សរទាំងអស់បានទេ"</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"កែតម្រូវលក្ខណៈពណ៌ និងអក្សរធៀបនឹងពណ៌ផ្ទៃខាងក្រោយរបស់អេក្រង់អ្នក"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"មើលសាកល្បង"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Helen, Adam"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"2 ថ្ងៃមុន"</string>
@@ -2572,8 +2572,7 @@
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"បង្កើនកម្រិត​ថាមពល​ថ្ម"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"បិទ នៅពេល​សាកថ្មពេញ"</string>
     <string name="battery_saver_sticky_title_percentage" msgid="1178162022087559148">"បិទនៅ <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
-    <!-- no translation found for battery_saver_sticky_description_new (8543277078136947874) -->
-    <skip />
+    <string name="battery_saver_sticky_description_new" msgid="8543277078136947874">"មុខងារ​សន្សំ​ថ្មនឹងបិទ នៅពេលសាកថ្មលើសពី <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"បើក"</string>
@@ -2691,7 +2690,7 @@
     <string name="cellular_security_settings_title" msgid="7779141923670352595">"សុវត្ថិភាពបណ្ដាញទូរសព្ទចល័ត"</string>
     <string name="cellular_security_notifications" msgid="4619728340612184944">"ការ​ជូនដំណឹង"</string>
     <string name="cellular_security_notifications_controller_title" msgid="4853056963523277847">"ការជូនដំណឹងអំពីបណ្ដាញ"</string>
-    <string name="cellular_security_notifications_controller_summary" msgid="8339863845393759958">"ទទួលបានការជូនដំណឹង នៅពេលឧបករណ៍របស់អ្នកភ្ជាប់ទៅបណ្ដាញដែលមិនបានអ៊ីនគ្រីប ឬនៅពេលបណ្ដាញកត់ត្រាលេខសម្គាល់ពិសេសរបស់ស៊ីម ឬឧបករណ៍របស់អ្នក"</string>
+    <string name="cellular_security_notifications_controller_summary" msgid="8339863845393759958">"ទទួលបានការជូនដំណឹង នៅពេលឧបករណ៍របស់អ្នកភ្ជាប់ទៅបណ្ដាញដែលមិនបានអ៊ីនគ្រីប ឬនៅពេលបណ្ដាញកត់ត្រាលេខកូដសម្គាល់ខុសពីគេរបស់ស៊ីម ឬឧបករណ៍របស់អ្នក"</string>
     <string name="cellular_security_settings_encryption_title" msgid="4013084091666375780">"ការ​អ៊ីនគ្រីប"</string>
     <string name="cellular_security_network_generations_title" msgid="2343026988833783854">"ការបង្កើតបណ្ដាញ"</string>
     <string name="cellular_security_network_generations_summary" msgid="139087814553929402">"អ្នកអាចកំណត់រចនាសម្ព័ន្ធស៊ីមកាតដែលបានដំឡើងនីមួយៗ ដើម្បីភ្ជាប់ទៅបណ្ដាញដែលអាចប្រើ 3G, 4G និង 5G តែប៉ុណ្ណោះ។ ស៊ីមនេះនឹងមិនភ្ជាប់ទៅបណ្ដាញ 2G ចាស់ដែលគ្មានសុវត្ថិភាពទេ។ ការកំណត់នេះអាចនឹងដាក់កំហិតលើការតភ្ជាប់របស់អ្នក ក្នុងករណីបណ្ដាញដែលអាចប្រើបានគឺ 2G តែប៉ុណ្ណោះ។ ក្នុងករណីមានអាសន្ន 2G អាចនឹងត្រូវបានប្រើប្រាស់។"</string>
@@ -4804,46 +4803,27 @@
     <string name="work_policy_privacy_settings" msgid="2702644843505242596">"ព័ត៌មាន​អំពីគោលការណ៍ការងារ​របស់អ្នក"</string>
     <string name="work_policy_privacy_settings_summary" msgid="690118670737638405">"ការកំណត់​​ដែល​ស្ថិត​ក្រោម​ការ​គ្រប់គ្រង​អ្នកគ្រប់គ្រង​ផ្នែកព័ត៌មានវិទ្យា​របស់អ្នក"</string>
     <string name="track_frame_time_keywords" msgid="7885340257945922239">"GPU"</string>
-    <!-- no translation found for enable_16k_pages (8001470927566110689) -->
-    <skip />
-    <!-- no translation found for enable_16k_pages_summary (1964363364670306912) -->
-    <skip />
-    <!-- no translation found for confirm_enable_16k_pages_title (1286925577014793351) -->
-    <skip />
-    <!-- no translation found for confirm_enable_16k_pages_text (570198382662424714) -->
-    <skip />
-    <!-- no translation found for confirm_enable_4k_pages_title (3210360137887034659) -->
-    <skip />
-    <!-- no translation found for confirm_enable_4k_pages_text (155070605667160083) -->
-    <skip />
+    <string name="enable_16k_pages" msgid="8001470927566110689">"ចាប់ផ្ដើមដោយប្រើទំហំទំព័រ 16KB"</string>
+    <string name="enable_16k_pages_summary" msgid="1964363364670306912">"ចាប់ផ្ដើមឧបករណ៍ដោយប្រើខឺណែលដែលស្គាល់ទំហំទំព័រ 16KB"</string>
+    <string name="confirm_enable_16k_pages_title" msgid="1286925577014793351">"ប្ដូរពីមុខងារ 4kB ទៅមុខងារ 16KB"</string>
+    <string name="confirm_enable_16k_pages_text" msgid="570198382662424714">"អ្នកកំពុងប្រើមុខងារ Page-Agnostic ដែលដំណើរការខឺណែល 4kB ហើយអ្នកកំពុងប្ដូរទៅមុខងារ 16KB។ មិនអាចធានាសុក្រឹតភាពកម្មវិធីនៅក្នុងមុខងារនេះទេ ហើយទិន្នន័យទាំងឡាយដែលបានរក្សាទុកនៅលើទូរសព្ទ នៅពេលកម្មវិធីដំណើរការប្រព័ន្ធត្រូវបានដោះសោ អាច​ប្រឈមនឹងហានិភ័យ។ វានឹងចាប់ផ្ដើមឧបករណ៍ឡើងវិញ។ មុខងារមួយចំនួននឹងត្រូវបានបិទនៅក្នុងមុខងារទាំងនេះ ដូច្នេះកម្មវិធីមួយចំនួនប្រហែលជាមិនដំណើរការទេ។ ដើម្បី​ត្រឡប់​ឧបករណ៍​ទៅ​មុខងារ​ផលិតកម្មវិញ អ្នក​នឹង​ត្រូវ​ប្ដូរ​ទៅ​មុខងារ 4kB និង​ចាក់សោ​កម្មវិធីដំណើរការប្រព័ន្ធ ដែល​កំណត់​ឧបករណ៍ដូច​ចេញ​ពី​រោងចក្រ។ បន្ទាប់ពីឧបករណ៍ចាប់ផ្ដើមចូល Android ដោយជោគជ័យ សូមបិទការដោះសោ OEM នៅក្នុងជម្រើសសម្រាប់អ្នកអភិវឌ្ឍន៍។"</string>
+    <string name="confirm_enable_4k_pages_title" msgid="3210360137887034659">"ប្ដូរពីមុខងារ 16KB ទៅមុខងារ 4KB"</string>
+    <string name="confirm_enable_4k_pages_text" msgid="155070605667160083">"អ្នកកំពុងប្រើមុខងារ Page-Agnostic ដែលដំណើរការខឺណែល 16KB ហើយអ្នកកំពុងប្ដូរទៅមុខងារ 4KB។ មិនអាចធានាសុក្រឹតភាពកម្មវិធីនៅក្នុងមុខងារនេះទេ ហើយទិន្នន័យទាំងឡាយដែលបានរក្សាទុកនៅលើទូរសព្ទ នៅពេលកម្មវិធីដំណើរការប្រព័ន្ធត្រូវបានដោះសោ អាច​ប្រឈមនឹងហានិភ័យ។ វានឹងចាប់ផ្ដើមឧបករណ៍ឡើងវិញ។ មុខងារមួយចំនួននឹងត្រូវបានបិទនៅក្នុងមុខងារទាំងនេះ ដូច្នេះកម្មវិធីមួយចំនួនប្រហែលជាមិនដំណើរការទេ។ ដើម្បីត្រឡប់ឧបករណ៍ទៅមុខងារផលិតកម្មវិញ អ្នកត្រូវចាក់សោកម្មវិធីដំណើរការប្រព័ន្ធ ដែល​កំណត់​ឧបករណ៍ដូច​ចេញ​ពី​រោងចក្រ។ បន្ទាប់ពីឧបករណ៍ចាប់ផ្ដើមចូល Android ដោយជោគជ័យ សូមបិទការដោះសោ OEM នៅក្នុងជម្រើសសម្រាប់អ្នកអភិវឌ្ឍន៍។"</string>
     <string name="toast_16k_update_failed_text" msgid="8888858987184345567">"មិនអាចធ្វើបច្ចុប្បន្នភាពខឺណែលទៅជាខឺណែលដែលត្រូវគ្នានឹងទំព័រ 16KB បានទេ។"</string>
     <string name="progress_16k_ota_title" msgid="2117218313875523741">"កំពុងអនុវត្តការផ្លាស់ប្ដូរ"</string>
-    <!-- no translation found for confirm_format_ext4_title (6696191800594435577) -->
-    <skip />
-    <!-- no translation found for confirm_format_ext4_text (7940372488624630214) -->
-    <skip />
-    <!-- no translation found for format_ext4_failure_toast (8059453995800471549) -->
-    <skip />
-    <!-- no translation found for confirm_oem_unlock_for_16k_title (5374451262432025419) -->
-    <skip />
-    <!-- no translation found for confirm_oem_unlock_for_16k_text (3583604865119937957) -->
-    <skip />
-    <!-- no translation found for page_agnostic_4k_pages_title (1184703958249093215) -->
-    <skip />
-    <!-- no translation found for page_agnostic_4k_pages_text_short (2894243902906666242) -->
-    <skip />
-    <!-- no translation found for page_agnostic_4k_pages_text (8284806650260868833) -->
-    <skip />
-    <!-- no translation found for page_agnostic_16k_pages_title (7762533464569818498) -->
-    <skip />
-    <!-- no translation found for page_agnostic_16k_pages_text_short (269039281591806585) -->
-    <skip />
-    <!-- no translation found for page_agnostic_16k_pages_text (6208765386837706582) -->
-    <skip />
-    <!-- no translation found for page_agnostic_notification_channel_name (1658444283036376361) -->
-    <skip />
-    <!-- no translation found for page_agnostic_notification_action (2309805437430150456) -->
-    <skip />
+    <string name="confirm_format_ext4_title" msgid="6696191800594435577">"កំណត់​ទម្រង់​ឧបករណ៍​ឡើងវិញ​ទៅជា ext4 ឬ? (តម្រូវឱ្យមានសម្រាប់មុខងារ 16KB)"</string>
+    <string name="confirm_format_ext4_text" msgid="7940372488624630214">"ផ្នែកទិន្នន័យរបស់ឧបករណ៍នេះត្រូវបំប្លែងទៅជា ext4 មុនពេលប្រើជម្រើសសម្រាប់អ្នកអភិវឌ្ឍន៍ 16KB។ មិនអាចធានាសុក្រឹតភាពកម្មវិធីនៅក្នុងមុខងារនេះទេ ហើយទិន្នន័យទាំងឡាយដែលបានរក្សាទុកនៅលើទូរសព្ទ នៅពេលកម្មវិធីដំណើរការប្រព័ន្ធត្រូវបានដោះសោ អាច​ប្រឈមនឹងហានិភ័យ។ ការបើកដំណើរការជម្រើស 16KB នឹងតម្រូវឱ្យមានការចាប់ផ្ដើមឡើងវិញម្ដងទៀតបន្ទាប់ពីនេះ។ នៅពេលដែលអ្នកកំពុងប្រើមុខងារនេះ អ្នកអាចប្ដូរទៅមករវាងមុខងារ 4KB និង 16KB តាមរយៈការចាប់​ផ្ដើម​ឡើង​វិញតែម្ដងគត់។ មុខងារមួយចំនួននឹងត្រូវបានបិទនៅក្នុងមុខងារទាំងនេះ ដូច្នេះកម្មវិធីមួយចំនួនប្រហែលជាមិនដំណើរការទេ។ ដើម្បីត្រឡប់ឧបករណ៍ទៅមុខងារផលិតកម្ម អ្នកនឹងត្រូវប្ដូរត្រឡប់ទៅមុខងារ 4KB វិញ បន្ទាប់មកចាក់សោកម្មវិធីដំណើរការប្រព័ន្ធ ដែល​កំណត់​ឧបករណ៍ដូច​ចេញ​ពី​រោងចក្រ។ បន្ទាប់ពីឧបករណ៍ចាប់ផ្ដើមចូល Android ដោយជោគជ័យ សូមបិទការដោះសោ OEM នៅក្នុងជម្រើសសម្រាប់អ្នកអភិវឌ្ឍន៍។ ឧបករណ៍នឹងត្រូវបានឈូស ហើយប្រព័ន្ធឯកសារនឹងត្រូវបានប្ដូរទៅជា ext4 បន្ទាប់ពីបញ្ជាក់រួច។ បន្ទាប់​ពី​ដំណើរការ​នេះ​ចប់ សូម​ត្រឡប់​មក​បើក 16KB ម្ដង​ទៀត។"</string>
+    <string name="format_ext4_failure_toast" msgid="8059453995800471549">"មិនអាច​ឈូស និងកំណត់​ទម្រង់​ផ្នែក​ទិន្នន័យ​ឡើងវិញ​ទៅជា ext4 បានទេ។"</string>
+    <string name="confirm_oem_unlock_for_16k_title" msgid="5374451262432025419">"តម្រូវឱ្យដោះសោកម្មវិធីដំណើរការប្រព័ន្ធសម្រាប់មុខងារ 16KB"</string>
+    <string name="confirm_oem_unlock_for_16k_text" msgid="3583604865119937957">"ឧបករណ៍នេះត្រូវដោះសោកម្មវិធីដំណើរការប្រព័ន្ធ មុនពេលប្រើជម្រើសសម្រាប់អ្នកអភិវឌ្ឍន៍ 16KB។ មិនអាចធានាសុក្រឹតភាពកម្មវិធីនៅក្នុងមុខងារនេះទេ ហើយទិន្នន័យទាំងឡាយដែលបានរក្សាទុកនៅលើទូរសព្ទ នៅពេលកម្មវិធីដំណើរការប្រព័ន្ធត្រូវបានដោះសោ អាច​ប្រឈមនឹងហានិភ័យ។ ទិន្នន័យ និងការកំណត់ទាំងអស់របស់អ្នកប្រើប្រាស់នឹងត្រូវបានឈូស នៅពេលបើកដំណើរការមុខងារ 16KB។ នៅពេលកម្មវិធីដំណើរការប្រព័ន្ធត្រូវបានដោះសោ ការបើកដំណើរការជម្រើស 16KB សកម្មនឹងតម្រូវឱ្យមានការចាប់ផ្ដើមឡើងវិញពីរដង។ នៅពេលដែលអ្នកកំពុងប្រើមុខងារនេះ អ្នកអាចប្ដូរទៅមករវាងមុខងារ 4KB និង 16KB តាមរយៈការចាប់​ផ្ដើម​ឡើង​វិញតែម្ដងគត់។ មុខងារមួយចំនួននឹងត្រូវបានបិទនៅក្នុងមុខងារទាំងនេះ ដូច្នេះកម្មវិធីមួយចំនួនប្រហែលជាមិនដំណើរការទេ។ ដើម្បី​ត្រឡប់​ឧបករណ៍​ទៅ​មុខងារ​ផលិតកម្ម អ្នក​ត្រូវ​ប្ដូរ​ទៅ​មុខងារ 4KB វិញ បន្ទាប់​មក​ ការចាក់សោ OEM/កម្មវិធីដំណើរការប្រព័ន្ធ (ដែលកំណត់​ឧបករណ៍ដូច​ចេញ​ពី​រោងចក្រ​)។ សូមដោះសោកម្មវិធីដំណើរការប្រព័ន្ធ រួចព្យាយាមម្ដងទៀត។ អ្នកអាចមើលការណែនាំអំពីរបៀបអនុវត្តសកម្មភាពនេះតាម &lt;a href=\"https://source.android.com/docs/core/architecture/bootloader/locking_unlocking\"&gt;https://source.android.com/docs/core/architecture/bootloader/locking_unlocking&lt;/a&gt;"</string>
+    <string name="page_agnostic_4k_pages_title" msgid="1184703958249093215">"ដោយប្រើមុខងារ Page-Agnostic 4KB"</string>
+    <string name="page_agnostic_4k_pages_text_short" msgid="2894243902906666242">"អ្នកកំពុងប្រើមុខងារ 4KB នៃមុខងារ Page-Agnostic។ មិនអាចធានាសុក្រឹតភាពកម្មវិធីនៅក្នុងមុខងារនេះទេ ហើយទិន្នន័យទាំងឡាយដែលបានរក្សាទុកនៅលើទូរសព្ទ នៅពេលកម្មវិធីដំណើរការប្រព័ន្ធត្រូវបានដោះសោ អាច​ប្រឈមនឹងហានិភ័យ។ មុខងារមួយចំនួននឹងត្រូវបានបិទនៅក្នុងមុខងារទាំងនេះ ដូច្នេះកម្មវិធីមួយចំនួនប្រហែលជាមិនដំណើរការទេ។ ដើម្បីបញ្ចូលមុខងារផលិតកម្មឡើងវិញ អ្នកត្រូវតែចាក់សោកម្មវិធីដំណើរការប្រព័ន្ធរបស់ឧបករណ៍។ ចុចដើម្បីអានបន្ថែម។"</string>
+    <string name="page_agnostic_4k_pages_text" msgid="8284806650260868833">"អ្នកកំពុងប្រើមុខងារ 4KB នៃមុខងារ Page-Agnostic។ មិនអាចធានាសុក្រឹតភាពកម្មវិធីនៅក្នុងមុខងារនេះទេ ហើយទិន្នន័យទាំងឡាយដែលបានរក្សាទុកនៅលើទូរសព្ទ នៅពេលកម្មវិធីដំណើរការប្រព័ន្ធត្រូវបានដោះសោ អាច​ប្រឈមនឹងហានិភ័យ។ មុខងារមួយចំនួននឹងត្រូវបានបិទនៅក្នុងមុខងារទាំងនេះ ដូច្នេះកម្មវិធីមួយចំនួនប្រហែលជាមិនដំណើរការទេ។ ដើម្បីបញ្ចូលមុខងារផលិតកម្មឡើងវិញ អ្នកត្រូវតែចាក់សោកម្មវិធីដំណើរការប្រព័ន្ធរបស់ឧបករណ៍។ ដំណើរការនេះនឹង​កំណត់​ឧបករណ៍​ដូចចេញពីរោងចក្រ រួចត្រឡប់ឧបករណ៍ទៅ​ការកំណត់​ផលិតកម្មវិញ។ បន្ទាប់ពីឧបករណ៍ចាប់ផ្ដើមចូល Android ដោយជោគជ័យ សូមបិទការដោះសោ OEM នៅក្នុងជម្រើសសម្រាប់អ្នកអភិវឌ្ឍន៍។ ប្រសិនបើ​ឧបករណ៍​មិនអាចចាប់ផ្ដើម​ប្រព័ន្ធ​ប្រតិបត្តិការ Android ឬ​មិន​មានស្ថិរភាព សូម​ជំនួសកម្មវិធីឧបករណ៍​ឡើងវិញដោយប្រើរូបភាពពីរោងចក្រចុងក្រោយបំផុតពី &lt;a href=\"https://developers.google.com/android/images\"&gt;https://developers.google.com/android/images&lt;/a&gt; ឬប្រើ &lt;a href=\"https://flash.android.com/back-to-public\"&gt;https://flash.android.com/back-to-public&lt;/a&gt; រួចជ្រើសរើស \'ឈូសឧបករណ៍\' \'ចាក់​សោកម្មវិធីដំណើរការប្រព័ន្ធ\' និង \'បង្ខំឱ្យជំនួសផ្នែកទាំងអស់\'។"</string>
+    <string name="page_agnostic_16k_pages_title" msgid="7762533464569818498">"ដោយប្រើមុខងារ Page-Agnostic 16KB"</string>
+    <string name="page_agnostic_16k_pages_text_short" msgid="269039281591806585">"អ្នកកំពុងប្រើមុខងារ 16KB នៃមុខងារ Page-Agnostic។ មិនអាចធានាសុក្រឹតភាពកម្មវិធីនៅក្នុងមុខងារនេះទេ ហើយទិន្នន័យទាំងឡាយដែលបានរក្សាទុកនៅលើទូរសព្ទ នៅពេលកម្មវិធីដំណើរការប្រព័ន្ធត្រូវបានដោះសោ អាច​ប្រឈមនឹងហានិភ័យ។ មុខងារមួយចំនួននឹងត្រូវបានបិទនៅក្នុងមុខងារទាំងនេះ ដូច្នេះកម្មវិធីមួយចំនួនប្រហែលជាមិនដំណើរការទេ។ ដើម្បីចូលទៅក្នុងមុខងារផលិតកម្មឡើងវិញ អ្នកត្រូវតែប្ដូរត្រឡប់ទៅមុខងារ 4K បន្ទាប់មកចាក់សោកម្មវិធីដំណើរការប្រព័ន្ធរបស់ឧបករណ៍។ ចុចដើម្បីអានបន្ថែម។"</string>
+    <string name="page_agnostic_16k_pages_text" msgid="6208765386837706582">"អ្នកកំពុងប្រើមុខងារ 16KB នៃមុខងារ Page-Agnostic។ មិនអាចធានាសុក្រឹតភាពកម្មវិធីនៅក្នុងមុខងារនេះទេ ហើយទិន្នន័យទាំងឡាយដែលបានរក្សាទុកនៅលើទូរសព្ទ នៅពេលកម្មវិធីដំណើរការប្រព័ន្ធត្រូវបានដោះសោ អាច​ប្រឈមនឹងហានិភ័យ។ មុខងារមួយចំនួននឹងត្រូវបានបិទនៅក្នុងមុខងារទាំងនេះ ដូច្នេះកម្មវិធីមួយចំនួនប្រហែលជាមិនដំណើរការទេ។ ដើម្បីចូលទៅក្នុងមុខងារផលិតកម្មឡើងវិញ អ្នកត្រូវតែប្ដូរត្រឡប់ទៅមុខងារ 4K បន្ទាប់មកចាក់សោកម្មវិធីដំណើរការប្រព័ន្ធរបស់ឧបករណ៍។ ដំណើរការនេះនឹង​កំណត់​ឧបករណ៍​ដូចចេញពីរោងចក្រ រួចត្រឡប់ឧបករណ៍ទៅ​ការកំណត់​ផលិតកម្មវិញ។ បន្ទាប់ពីឧបករណ៍ចាប់ផ្ដើមចូល Android ដោយជោគជ័យ សូមបិទការដោះសោ OEM នៅក្នុងជម្រើសសម្រាប់អ្នកអភិវឌ្ឍន៍។ ប្រសិនបើ​ឧបករណ៍​មិនអាចចាប់ផ្ដើម​ប្រព័ន្ធ​ប្រតិបត្តិការ Android ឬ​មិន​មានស្ថិរភាព សូម​ជំនួសកម្មវិធីឧបករណ៍​ឡើងវិញដោយប្រើរូបភាពពីរោងចក្រចុងក្រោយបំផុតពី &lt;a href=\"https://developers.google.com/android/images\"&gt;https://developers.google.com/android/images&lt;/a&gt; ឬប្រើ &lt;a href=\"https://flash.android.com/back-to-public\"&gt;https://flash.android.com/back-to-public&lt;/a&gt; រួចជ្រើសរើស \'ឈូសឧបករណ៍\' \'ចាក់​សោកម្មវិធីដំណើរការប្រព័ន្ធ\' និង \'បង្ខំឱ្យជំនួសផ្នែកទាំងអស់\'។"</string>
+    <string name="page_agnostic_notification_channel_name" msgid="1658444283036376361">"មុខងារ Page-Agnostic 16KB"</string>
+    <string name="page_agnostic_notification_action" msgid="2309805437430150456">"អានបន្ថែម"</string>
     <string name="bug_report_handler_title" msgid="713439959113250125">"ឧបករណ៍​ដោះស្រាយ​របាយការណ៍​អំពី​បញ្ហា"</string>
     <string name="bug_report_handler_picker_footer_text" msgid="4935758328366585673">"កំណត់​ថាតើ​កម្មវិធី​មួយណា​ដែលត្រូវ​ចាត់ចែង​ផ្លូវកាត់​សម្រាប់​របាយការណ៍​អំពី​បញ្ហា​នៅលើ​ឧបករណ៍​របស់អ្នក​។"</string>
     <string name="personal_profile_app_subtext" msgid="5586060806997067676">"ផ្ទាល់ខ្លួន"</string>
@@ -5010,8 +4990,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"បិទមុខងារ​ពេលជិះយន្តហោះ ដើម្បីប្រើ UWB"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"មិនអាចប្រើ UWB នៅក្នុងទីតាំងបច្ចុប្បន្នបានទេ"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"Thread"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"ភ្ជាប់ជាមួយឧបករណ៍ដែលត្រូវគ្នាដោយប្រើ Thread ដើម្បីទទួលបានបទពិសោធប្រើប្រាស់ផ្ទះឆ្លាតវៃរលូន"</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"បិទមុខងារ​ពេល​ជិះ​យន្តហោះ ដើម្បីប្រើ Thread"</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"ការចូលប្រើ​កាមេរ៉ា"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"ការចូលប្រើ​មីក្រូហ្វូន"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"សម្រាប់កម្មវិធី និងសេវាកម្ម"</string>
