--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"Apl dengan kebenaran peranti Berdekatan boleh menentukan kedudukan relatif peranti tersambung."</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"Akses lokasi dimatikan untuk apl dan perkhidmatan. Lokasi peranti anda mungkin tetap dihantar kepada pasukan bantuan kecemasan apabila anda menghubungi atau menghantar teks kepada nombor kecemasan."</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"Ketahui lebih lanjut tentang tetapan Lokasi"</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"Tukar akses lokasi melalui Tetapan &gt; Keselamatan dan Privasi &gt; Kawalan privasi"</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"Akaun"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"Keselamatan"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"Penyulitan &amp; bukti kelayakan"</string>
@@ -2017,7 +2018,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Kontras warna"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Kontras yang lebih tinggi menjadikan teks, butang dan ikon lebih menonjol. Pilih kontras yang paling sesuai untuk anda."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Sesetengah apl mungkin tidak menyokong semua tetapan kontras warna dan teks"</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"Laraskan warna dan teks dengan warna latar skrin anda"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"Pratonton"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Helen, Adam"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"2 hari yang lalu"</string>
@@ -4990,8 +4990,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"Matikan mod pesawat untuk menggunakan UWB"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"UWB tidak tersedia di lokasi semasa"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"Urutan"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"Sambung kepada peranti yang serasi menggunakan Urutan untuk mendapatkan pengalaman kediaman pintar yang lancar"</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"Matikan mod pesawat untuk menggunakan Urutan"</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"Akses kamera"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"Akses mikrofon"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Untuk apl dan perkhidmatan"</string>
