--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"Apps met rechten voor apparaten in de buurt kunnen ongeveer inschatten waar verbonden apparaten zijn."</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"Toegang tot de locatie staat uit voor apps en services. De locatie van je apparaat kan nog steeds worden gestuurd naar nooddiensten als je een alarmnummer belt of sms\'t."</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"Meer informatie over locatie-instellingen"</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"Wijzig de locatietoegang via Instellingen &gt; Beveiliging en privacy &gt; Privacyopties"</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"Accounts"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"Beveiliging"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"Versleuteling en inloggegevens"</string>
@@ -2017,7 +2018,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Kleurcontrast"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Bij een hoger contrast vallen tekst, knoppen en iconen meer op. Kies het contrast dat je prettig vindt."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Sommige apps ondersteunen misschien niet alle instellingen voor kleur- en tekstcontrast"</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"Pas aan hoe kleuren en tekst eruitzien tegen de achtergrondkleur van je scherm"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"Voorbeeld"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Helen, Adam"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"2 dagen geleden"</string>
@@ -2544,7 +2544,7 @@
     <string name="battery_detail_since_full_charge" msgid="5650946565524184582">"Uitsplitsing sinds laatste volledige lading"</string>
     <string name="battery_last_full_charge" msgid="8308424441475063956">"Laatste volledige lading"</string>
     <string name="battery_full_charge_last" msgid="465146408601016923">"Geschatte gebruikstijd na volledige lading"</string>
-    <string name="battery_footer_summary" msgid="6753248007004259000">"Resterende batterijtijd is een schatting en hangt af van het gebruik"</string>
+    <string name="battery_footer_summary" msgid="6753248007004259000">"Resterende batterijduur is een schatting en hangt af van het gebruik"</string>
     <string name="battery_detail_power_usage" msgid="1492926471397355477">"Batterijgebruik"</string>
     <string name="battery_not_usage" msgid="3851536644733662392">"Geen gebruik sinds laatste volledige lading"</string>
     <string name="battery_not_usage_24hr" msgid="8397519536160741248">"Geen gebruik in de afgelopen 24 u"</string>
@@ -4979,7 +4979,7 @@
     <string name="enable_2g_summary" msgid="2794534052372565914">"2G is minder veilig, maar kan op bepaalde locaties zorgen voor een betere verbinding. Voor noodoproepen is 2G altijd toegestaan."</string>
     <string name="enable_2g_summary_disabled_carrier" msgid="8141118453219482762">"<xliff:g id="CARRIER_NAME_2G">%1$s</xliff:g> vereist dat 2G beschikbaar is"</string>
     <string name="require_cellular_encryption_title" msgid="6087085031703089235">"Alleen versleutelde netwerken toestaan"</string>
-    <string name="require_cellular_encryption_summary" msgid="6090569065420631457">"De beveiliging is beter maar op sommige locaties kan je mobiele netwerkverbinding beperkt zijn. Noodoproepen zijn altijd toegestaan."</string>
+    <string name="require_cellular_encryption_summary" msgid="6090569065420631457">"De beveiliging is beter maar op sommige locaties kan je mobiele netwerkverbinding beperkt zijn. Noodoproepen zijn altijd toegestaan"</string>
     <string name="app_info_all_services_label" msgid="1487070364839071105">"Alle services"</string>
     <string name="show_clip_access_notification" msgid="7782300987639778542">"Toegang tot klembord tonen"</string>
     <string name="show_clip_access_notification_summary" msgid="474090757777203207">"Toon een bericht als apps toegang hebben tot tekst, afbeeldingen of andere content die je hebt gekopieerd"</string>
@@ -4990,8 +4990,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"Zet de vliegtuigmodus uit om UWB te gebruiken"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"UWB is niet beschikbaar op je huidige locatie"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"Thread"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"Maak verbinding met geschikte apparaten via Thread voor een naadloze smarthome-functionaliteit"</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"Zet de vliegtuigmodus uit om Thread te gebruiken"</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"Cameratoegang"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"Microfoontoegang"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Voor apps en services"</string>
@@ -5072,7 +5076,7 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Later opnieuw opstarten"</string>
     <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"Ruimtelijke audio"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Compatibele media leveren een royaler geluid"</string>
-    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Bewegingen van het hoofd volgen"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Hoofdtracking"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"De audio wordt aangepast als je je hoofd beweegt, voor een natuurlijker geluid"</string>
     <string name="bluetooth_details_permissions_sync_title" msgid="7277580382321003521">"Rechten synchroniseren vanaf de telefoon"</string>
     <string name="bluetooth_details_permissions_sync_summary" msgid="8125037984381432059">"Geef je smartwatch dezelfde app-rechten die je op deze telefoon hebt toegestaan"</string>
