--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"අවට උපාංගවල සාපේක්ෂ පිහිටීම තීරණය කිරීමට අවට උපාංග අවසරය ඇති යෙදුම්වලට හැකිය."</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"යෙදුම් සහ සේවා සඳහා ස්ථාන ප්‍රවේශය ක්‍රියාවිරහිතයි. ඔබ හදිසි අවස්ථා අංකයක් අමතන විට හෝ කෙටි පණිවිඩයක් යැවීමේදී ඔබගේ උපාංගයේ ස්ථානය හදිසි අවස්ථා ප්‍රතිචාර දක්වන්නන්ට තවම යැවිය හැකිය."</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"ස්ථාන සැකසීම් පිළිබඳව තව දැන ගන්න"</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"ස්ථාන ප්‍රවේශය වෙනස් කිරීමට, සැකසීම් &gt; ආරක්ෂාව සහ පෞද්ගලිකත්වය &gt; පෞද්ගලිකත්ව පාලන වෙත යන්න"</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"ගිණුම්"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"ආරක්ෂාව"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"සංකේතනය සහ අක්තපත්‍ර"</string>
@@ -2017,7 +2018,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"වර්ණ අසමානතාව"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"ඉහළ අසමානතාව පෙළ, බොත්තම් සහ අයිකන වඩාත් කැපී පෙනෙන ලෙස සකසයි. ඔබට වඩාත්ම හොඳ යැයි හැඟෙන අසමානතාව තෝරන්න."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"සමහර යෙදුම් සියලු වර්ණ සහ පෙළ අසමානතා සැකසීම් සඳහා සහාය නොදක්වයි"</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"ඔබේ තිරයේ පසුබිම් වර්ණයට එරෙහිව වර්ණ සහ පෙළ පෙනෙන ආකාරය සකසන්න"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"පෙරදසුන"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"හෙලන්, ඇඩම්"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"දින 2කට පෙර"</string>
@@ -2572,8 +2572,7 @@
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"බැටරි ආයු කාලය දීර්ඝ කරන්න"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"ආරෝපණය වූ විට ක්‍රියාවිරහිත කරන්න"</string>
     <string name="battery_saver_sticky_title_percentage" msgid="1178162022087559148">"<xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>ට අක්‍රිය කරන්න"</string>
-    <!-- no translation found for battery_saver_sticky_description_new (8543277078136947874) -->
-    <skip />
+    <string name="battery_saver_sticky_description_new" msgid="8543277078136947874">"බැටරිය <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>ට වඩා ආරෝපණය වන විට බැටරි සුරැකුම ක්‍රියා විරහිත වේ"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"ක්‍රියාත්මක කරන්න"</string>
@@ -4804,46 +4803,27 @@
     <string name="work_policy_privacy_settings" msgid="2702644843505242596">"ඔබේ කාර්යාල ප්‍රතිපත්ති තතු"</string>
     <string name="work_policy_privacy_settings_summary" msgid="690118670737638405">"ඔබගේ IT පරිපාලක විසින් කළමනාකරණය කරන සැකසීම්"</string>
     <string name="track_frame_time_keywords" msgid="7885340257945922239">"GPU"</string>
-    <!-- no translation found for enable_16k_pages (8001470927566110689) -->
-    <skip />
-    <!-- no translation found for enable_16k_pages_summary (1964363364670306912) -->
-    <skip />
-    <!-- no translation found for confirm_enable_16k_pages_title (1286925577014793351) -->
-    <skip />
-    <!-- no translation found for confirm_enable_16k_pages_text (570198382662424714) -->
-    <skip />
-    <!-- no translation found for confirm_enable_4k_pages_title (3210360137887034659) -->
-    <skip />
-    <!-- no translation found for confirm_enable_4k_pages_text (155070605667160083) -->
-    <skip />
+    <string name="enable_16k_pages" msgid="8001470927566110689">"16KB පිටු ප්‍රමාණයෙන් ආරම්භ කරන්න"</string>
+    <string name="enable_16k_pages_summary" msgid="1964363364670306912">"16KB පිටු ප්‍රමාණයේ සහාය දක්වන කර්නලය භාවිතයෙන් උපාංගය ආරම්භ කරන්න"</string>
+    <string name="confirm_enable_16k_pages_title" msgid="1286925577014793351">"4kB ප්‍රකාරයේ සිට 16KB ප්‍රකාරයට මාරු වන්න"</string>
+    <string name="confirm_enable_16k_pages_text" msgid="570198382662424714">"ඔබ 4kB කර්නලයක් ධාවනය කරන පිටු-අඥෙයවාදී මාදිලියේ සිටින අතර, ඔබ 16KB ප්‍රකාරයට මාරු වේ. මෙම ප්‍රකාරයේ දී මෘදුකාංග අඛණ්ඩතාව සහතික කළ නොහැකි අතර, ආරම්භකය අගුළු හැර ඇති විට දුරකථනයේ ගබඩා කර ඇති ඕනෑම දත්තයක් අවදානමට ලක් විය හැක. මෙමඟින් උපාංගය නැවත ආරම්භ කරනු ඇත. මෙම ප්‍රකාර තුළ සමහර විශේෂාංග ක්‍රියාවිරහිත වනු ඇත, එබැවින් සමහර යෙදුම් ක්‍රියා නොකරනු ඇත. උපාංගය නිෂ්පාදන ප්‍රකාරයට ආපසු යාමට, ඔබට අවශ්‍ය වනු ඇත, 4kB මාදිලිය වෙත ආපසු ගොස් උපාංගය කර්මාන්තශාලාව යළි සකසන ආරම්භකය අගුළු දමන්න. උපාංගය සාර්ථකව Android සමග ආරම්භ වූ පසු, සංවර්ධක විකල්ප තුළ OEM අගුළු හැරීම ක්‍රියාවිරහිත කරන්න."</string>
+    <string name="confirm_enable_4k_pages_title" msgid="3210360137887034659">"16KB ප්‍රකාරයේ සිට 4KB ප්‍රකාරයට මාරු වන්න"</string>
+    <string name="confirm_enable_4k_pages_text" msgid="155070605667160083">"ඔබ 16KB කර්නලයක් ක්‍රියාත්මක වන පිටු-දෘෂ්ටික ප්‍රකාරයේ සිටින අතර, ඔබ 4KB ප්‍රකාරයට මාරු වේ. මෙම ප්‍රකාරයේ දී මෘදුකාංග අඛණ්ඩතාව සහතික කළ නොහැකි අතර, ආරම්භකය අගුළු හැර ඇති විට දුරකථනයේ ගබඩා කර ඇති ඕනෑම දත්තයක් අවදානමට ලක් විය හැක. මෙමඟින් උපාංගය නැවත ආරම්භ කරනු ඇත. මෙම ප්‍රකාර තුළ සමහර විශේෂාංග ක්‍රියාවිරහිත වනු ඇත, එබැවින් සමහර යෙදුම් ක්‍රියා නොකරනු ඇත. උපාංගය නිෂ්පාදන ප්‍රකාරයට ආපසු යාමට, ඔබට උපාංගය කර්මාන්තශාලාව යළි සකසන ආරම්භකය අගුළු දැමීමට සිදු වනු ඇත. උපාංගය සාර්ථකව Android සමග ආරම්භ වූ පසු, සංවර්ධක විකල්ප තුළ OEM අගුළු හැරීම ක්‍රියාවිරහිත කරන්න."</string>
     <string name="toast_16k_update_failed_text" msgid="8888858987184345567">"කර්නලය 16KB පිටු ගැළපෙන කර්නලයට යාවත්කාලීන කිරීමට අසමත් විය."</string>
     <string name="progress_16k_ota_title" msgid="2117218313875523741">"වෙනස යෙදීම"</string>
-    <!-- no translation found for confirm_format_ext4_title (6696191800594435577) -->
-    <skip />
-    <!-- no translation found for confirm_format_ext4_text (7940372488624630214) -->
-    <skip />
-    <!-- no translation found for format_ext4_failure_toast (8059453995800471549) -->
-    <skip />
-    <!-- no translation found for confirm_oem_unlock_for_16k_title (5374451262432025419) -->
-    <skip />
-    <!-- no translation found for confirm_oem_unlock_for_16k_text (3583604865119937957) -->
-    <skip />
-    <!-- no translation found for page_agnostic_4k_pages_title (1184703958249093215) -->
-    <skip />
-    <!-- no translation found for page_agnostic_4k_pages_text_short (2894243902906666242) -->
-    <skip />
-    <!-- no translation found for page_agnostic_4k_pages_text (8284806650260868833) -->
-    <skip />
-    <!-- no translation found for page_agnostic_16k_pages_title (7762533464569818498) -->
-    <skip />
-    <!-- no translation found for page_agnostic_16k_pages_text_short (269039281591806585) -->
-    <skip />
-    <!-- no translation found for page_agnostic_16k_pages_text (6208765386837706582) -->
-    <skip />
-    <!-- no translation found for page_agnostic_notification_channel_name (1658444283036376361) -->
-    <skip />
-    <!-- no translation found for page_agnostic_notification_action (2309805437430150456) -->
-    <skip />
+    <string name="confirm_format_ext4_title" msgid="6696191800594435577">"උපාංගය ext4 වෙත යළි ෆෝමැට් කරන්න ද? (16KB ප්‍රකාරය සඳහා අවශ්‍ය වේ)"</string>
+    <string name="confirm_format_ext4_text" msgid="7940372488624630214">"16KB සංවර්ධක විකල්පය භාවිත කිරීමට පෙර මෙම උපාංගයේ දත්ත කොටස ext4 වෙත පරිවර්තනය කළ යුතු ය. මෙම ප්‍රකාරයේ දී මෘදුකාංග අඛණ්ඩතාව සහතික කළ නොහැකි අතර, ආරම්භකය අගුළු හැර ඇති විට දුරකථනයේ ගබඩා කර ඇති ඕනෑම දත්තයක් අවදානමට ලක් විය හැක. 16KB විකල්පය සක්‍රිය කිරීමට මෙයින් පසු තවත් එක් නැවත පණගැන්වීමක් අවශ්‍ය වේ. ඔබ මෙම ප්‍රකාරයට පැමිණි පසු, ඔබට තනි නැවත පණ ගැන්වීමකින් 4KB සහ 16KB ප්‍රකාරය අතර මාරු විය හැක. මෙම ප්‍රකාර තුළ සමහර විශේෂාංග ක්‍රියාවිරහිත වනු ඇත, එබැවින් සමහර යෙදුම් ක්‍රියා නොකරනු ඇත. උපාංගය නිෂ්පාදන ප්‍රකාරයට ආපසු යාමට, ඔබට නැවත 4KB ප්‍රකාරයට මාරු වීමට අවශ්‍ය වන අතර පසුව උපාංගය කර්මාන්තශාලා යළි සකසන ආරම්භකය අගුළු දැමිය යුතු ය. උපාංගය සාර්ථකව Android සමග ආරම්භ වූ පසු, සංවර්ධක විකල්ප තුළ OEM අගුළු හැරීම ක්‍රියාවිරහිත කරන්න. උපාංගය මකා දමන අතර තහවුරු කිරීමෙන් පසු ගොනු පද්ධතිය ext4 වෙත වෙනස් කරනු ඇත. මෙය සම්පූර්ණ වූ පසු, කරුණාකර නැවත 16KB සබල කිරීමට ආපසු එන්න."</string>
+    <string name="format_ext4_failure_toast" msgid="8059453995800471549">"ext4 වෙත දත්ත කොටස් යළි ෆෝමැට් කිරීම සහ පිස දැමීම අසමත් විය."</string>
+    <string name="confirm_oem_unlock_for_16k_title" msgid="5374451262432025419">"16KB ප්‍රකාරය සඳහා ආරම්භක අගුළු හැරීම අවශ්‍ය වේ"</string>
+    <string name="confirm_oem_unlock_for_16k_text" msgid="3583604865119937957">"මෙම උපාංගයට 16KB සංවර්ධක විකල්පය භාවිත කිරීමට පෙර ආරම්භකය අගුළු හැර තිබිය යුතු ය. මෙම ප්‍රකාරයේ දී මෘදුකාංග අඛණ්ඩතාව සහතික කළ නොහැකි අතර, ආරම්භකය අගුළු හැර ඇති විට දුරකථනයේ ගබඩා කර ඇති ඕනෑම දත්තයක් අවදානමට ලක් විය හැක. 16KB ප්‍රකාරය සක්‍රිය කරන විට සියලුම පරිශීලක දත්ත සහ සැකසුම් මකා දමනු ලැබේ. ආරම්භකය අගුළු හැරීමෙන් පසු, 16KB විකල්පය සක්‍රිය කිරීමට නැවත පණ ගැන්වීම් දෙකක් අවශ්‍ය වේ. ඔබ මෙම ප්‍රකාරයට පැමිණි පසු, ඔබට තනි නැවත පණ ගැන්වීමකින් 4KB සහ 16KB ප්‍රකාරය අතර මාරු විය හැක. මෙම ප්‍රකාර තුළ සමහර විශේෂාංග ක්‍රියාවිරහිත වනු ඇත, එබැවින් සමහර යෙදුම් ක්‍රියා නොකරනු ඇත. උපාංගය නිෂ්පාදන ප්‍රකාරයට ආපසු යාමට, ඔබට නැවත 4KB ප්‍රකාරයට මාරු කිරීමට අවශ්‍ය වන අතර පසුව OEM/අගුළු ආරම්භකය (මෙම කර්මාන්තශාලාව යළි සකසන) අගුළු දැමීම අවශ්‍ය වේ. කරුණාකර ආරම්භකය අගුළු ඇර නැවත උත්සාහ කරන්න. &lt;a href=\"https://source.android.com/docs/core/architecture/bootloader/locking_unlocking\"&gt;https://source.android.com/docs/core/architecture/bootloader/locking_unlocking&lt;/a&gt; හි දී ඔබට මෙය කරන ආකාරය ගැන උපදෙස් බැලිය හැක"</string>
+    <string name="page_agnostic_4k_pages_title" msgid="1184703958249093215">"4KB පිටු-දෘෂ්ටික ප්‍රකාරය භාවිත කරමින්"</string>
+    <string name="page_agnostic_4k_pages_text_short" msgid="2894243902906666242">"ඔබ සිටින්නේ පිටු-දෘෂ්ටික ප්‍රකාරයේ 4KB ප්‍රකාරයේ ය. මෙම ප්‍රකාරයේ දී මෘදුකාංග අඛණ්ඩතාව සහතික කළ නොහැකි අතර, ආරම්භකය අගුළු හැර ඇති විට දුරකථනයේ ගබඩා කර ඇති ඕනෑම දත්තයක් අවදානමට ලක් විය හැක. මෙම ප්‍රකාර තුළ සමහර විශේෂාංග ක්‍රියාවිරහිත වනු ඇත, එබැවින් සමහර යෙදුම් ක්‍රියා නොකරනු ඇත. නිෂ්පාදන ප්‍රකාරය නැවත ඇතුල් කිරීම සඳහා, ඔබ උපාංගයේ ආරම්භකය අගුළු දැමිය යුතු ය. වැඩිදුර කියවීමට තට්ටු කරන්න."</string>
+    <string name="page_agnostic_4k_pages_text" msgid="8284806650260868833">"ඔබ සිටින්නේ පිටු-දෘෂ්ටික ප්‍රකාරයේ 4KB ප්‍රකාරයේ ය. මෙම ප්‍රකාරයේ දී මෘදුකාංග අඛණ්ඩතාව සහතික කළ නොහැකි අතර, ආරම්භකය අගුළු හැර ඇති විට දුරකථනයේ ගබඩා කර ඇති ඕනෑම දත්තයක් අවදානමට ලක් විය හැක. මෙම ප්‍රකාර තුළ සමහර විශේෂාංග ක්‍රියාවිරහිත වනු ඇත, එබැවින් සමහර යෙදුම් ක්‍රියා නොකරනු ඇත. නිෂ්පාදන ප්‍රකාරය නැවත ඇතුල් කිරීම සඳහා, ඔබ උපාංගයේ ආරම්භකය අගුළු දැමිය යුතු ය. මෙමඟින් උපාංගයට නැවත කර්මාන්තශාලා යළි සැකසීම සිදු කරන අතර එය නිෂ්පාදන සැකසුම් වෙත ප්‍රතිසාධනය කරයි. උපාංගය සාර්ථකව Android සමග ආරම්භ වූ පසු, සංවර්ධක විකල්ප තුළ OEM අගුළු හැරීම ක්‍රියාවිරහිත කරන්න. උපාංගය Android වෙත පණ ගැන්වීමට අපොහොසත් වුවහොත් හෝ අස්ථායී නම්, &lt;a href=\"https://developers.google.com/android/images\"&gt;https://developers.google.com/android/images&lt;/a&gt; or use &lt;a href=\"https://flash.android.com/back-to-public\"&gt;https://flash.android.com/back-to-public&lt;/a&gt; වෙතින් නවතම කර්මාන්තශාලා පින්තූර සමග උපාංගය නැවත ෆ්ලෑෂ් කර; \'උපාංගය පිස දමන්න\', \'අගුළු ආරම්භකය\' සහ \'සියලුම කොටස් ෆ්ලෑෂ් කිරීමට බල කරන්න\' තෝරන්න."</string>
+    <string name="page_agnostic_16k_pages_title" msgid="7762533464569818498">"16KB පිටු-දෘෂ්ටික ප්‍රකාරය භාවිත කරමින්"</string>
+    <string name="page_agnostic_16k_pages_text_short" msgid="269039281591806585">"ඔබ සිටින්නේ පිටු-දෘෂ්ටික ප්‍රකාරයේ 16KB ප්‍රකාරයේ ය. මෙම ප්‍රකාරයේ දී මෘදුකාංග අඛණ්ඩතාව සහතික කළ නොහැකි අතර, ආරම්භකය අගුළු හැර ඇති විට දුරකථනයේ ගබඩා කර ඇති ඕනෑම දත්තයක් අවදානමට ලක් විය හැක. මෙම ප්‍රකාර තුළ සමහර විශේෂාංග ක්‍රියාවිරහිත වනු ඇත, එබැවින් සමහර යෙදුම් ක්‍රියා නොකරනු ඇත. නිෂ්පාදන ප්‍රකාරයට නැවත ඇතුළු වීමට, ඔබ 4K ප්‍රකාරයට ආපසු මාරු කර උපාංගයේ ආරම්භකය අගුළු දැමිය යුතු ය. වැඩිදුර කියවීමට තට්ටු කරන්න."</string>
+    <string name="page_agnostic_16k_pages_text" msgid="6208765386837706582">"ඔබ සිටින්නේ පිටු-දෘෂ්ටික ප්‍රකාරයේ 16KB ප්‍රකාරයේ ය. මෙම ප්‍රකාරයේ දී මෘදුකාංග අඛණ්ඩතාව සහතික කළ නොහැකි අතර, ආරම්භකය අගුළු හැර ඇති විට දුරකථනයේ ගබඩා කර ඇති ඕනෑම දත්තයක් අවදානමට ලක් විය හැක. මෙම ප්‍රකාර තුළ සමහර විශේෂාංග ක්‍රියාවිරහිත වනු ඇත, එබැවින් සමහර යෙදුම් ක්‍රියා නොකරනු ඇත. නිෂ්පාදන ප්‍රකාරයට නැවත ඇතුළු වීමට, ඔබ 4K ප්‍රකාරයට ආපසු මාරු කර උපාංගයේ ආරම්භකය අගුළු දැමිය යුතු ය. මෙමඟින් උපාංගයට නැවත කර්මාන්තශාලා යළි සැකසීම සිදු කරන අතර එය නිෂ්පාදන සැකසුම් වෙත ප්‍රතිසාධනය කරයි. උපාංගය සාර්ථකව Android සමග ආරම්භ වූ පසු, සංවර්ධක විකල්ප තුළ OEM අගුළු හැරීම ක්‍රියාවිරහිත කරන්න. උපාංගය Android වෙත පණ ගැන්වීමට අපොහොසත් වුවහොත් හෝ අස්ථායී නම්, &lt;a href=\"https://developers.google.com/android/images\"&gt;https://developers.google.com/android/images&lt;/a&gt; or use &lt;a href=\"https://flash.android.com/back-to-public\"&gt;https://flash.android.com/back-to-public&lt;/a&gt; වෙතින් නවතම කර්මාන්තශාලා පින්තූර සමග උපාංගය නැවත ෆ්ලෑෂ් කර; \'උපාංගය පිස දමන්න\', \'අගුළු ආරම්භකය\' සහ \'සියලුම කොටස් ෆ්ලෑෂ් කිරීමට බල කරන්න\' තෝරන්න."</string>
+    <string name="page_agnostic_notification_channel_name" msgid="1658444283036376361">"16KB පිටු-දෘෂ්ටික ප්‍රකාරය"</string>
+    <string name="page_agnostic_notification_action" msgid="2309805437430150456">"තව කියවන්න"</string>
     <string name="bug_report_handler_title" msgid="713439959113250125">"දෝෂ වාර්තා හසුරුවනය"</string>
     <string name="bug_report_handler_picker_footer_text" msgid="4935758328366585673">"ඔබේ උපාංගයේ දෝෂ වර්තා කෙටිමග හසුරුවන්නේ කුමන යෙදුමදැයි තීරණය කරයි."</string>
     <string name="personal_profile_app_subtext" msgid="5586060806997067676">"පුද්ගලික"</string>
@@ -5010,8 +4990,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"UWB භාවිත කිරීමට ගුවන් යානා ප්‍රකාරය ක්‍රියාවිරහිත කරන්න"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"UWB වත්මන් ස්ථානයේ නොමැත"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"පොට"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"බාධාවකින් තොරව ස්මාර්ට් නිවාස අත්දැකීමක් සඳහා පොට භාවිතයෙන් ගැළපෙන උපාංග වෙත සම්බන්ධ වන්න"</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"පොට භාවිත කිරීමට ගුවන් යානා ප්‍රකාරය ක්‍රියාවිරහිත කරන්න"</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"කැමරා ප්‍රවේශය"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"මයික්‍රෆෝන ප්‍රවේශය"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"යෙදුම් සහ සේවා සඳහා"</string>
