--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"Matutukoy ng mga app na may pahintulot sa Mga kalapit na device ang relatibong posisyon ng mga nakakonektang device."</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"Naka-off para sa mga app at serbisyo ang access sa lokasyon. Posibleng ipadala pa rin ang lokasyon ng iyong device sa mga reresponde sa emergency kapag tumawag o nag-text ka sa pang-emergency na numero."</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"Matuto pa tungkol sa Mga setting ng lokasyon."</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"Para baguhin ang access sa lokasyon, pumunta sa Mga Setting &gt; Seguridad at Privacy &gt; Mga kontrol sa privacy"</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"Mga Account"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"Seguridad"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"Pag-encrypt at mga kredensyal"</string>
@@ -2017,7 +2018,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Contrast ng kulay"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Pinapatingkad ng mas mataas na contrast ang text, mga button, at mga icon. Piliin ang contrast na pinakamainam para sa iyo."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Posibleng hindi sinusuportahan ng ilang app ang lahat ng setting ng contrast ng kulay at text"</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"I-adjust ang hitsura ng mga kulay at text kumpara sa kulay ng background ng iyong screen"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"Preview"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Helen, Adam"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"Nakalipas na 2 araw"</string>
@@ -4955,7 +4955,7 @@
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Gamitin ang serbisyo ng pag-print"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Payagan ang maraming user"</string>
     <string name="multiple_users_main_switch_keywords" msgid="4845954458094134356">"payagan, maraming, user, pahintulot, marami"</string>
-    <string name="multiple_users_title_keywords" msgid="2395593167746225172">"marami, mga user, mga profile, mga tao, mga account, lumipat, maramihan"</string>
+    <string name="multiple_users_title_keywords" msgid="2395593167746225172">"maramihan, mga user, mga profile, mga tao, mga account, lumipat, marami"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Gamitin ang wireless na pag-debug"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Gamitin ang mga kagustuhan sa graphics driver"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"Gamitin ang Night Light"</string>
@@ -4990,8 +4990,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"I-off ang airplane mode para magamit ang UWB"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"Hindi available sa kasalukuyang lokasyon ang UWB"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"Thread"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"Kumonekta sa mga compatible na device gamit ang Thread para sa seamless na experience sa smart na tahanan"</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"I-off ang airplane mode para magamit ang Thread"</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"Access sa camera"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"Access sa mikropono"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Para sa mga app at serbisyo"</string>
