--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"નજીકના ડિવાઇસ જોવાની પરવાનગી ધરાવતી ઍપ, કનેક્ટ કરેલા ડિવાઇસના સ્થાનની માહિતી મેળવી શકે છે."</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"ઍપ અને સેવાઓને આપવામાં આવેલો લોકેશનની માહિતીનો ઍક્સેસ બંધ છે. આમ છતાં જ્યારે તમે કૉલ કે ટેક્સ્ટ મારફતે ઇમર્જન્સી નંબરનો સંપર્ક કરશો, ત્યારે ઇમર્જન્સીમાં પ્રતિસાદ આપનારાઓને તમારા ડિવાઇસના લોકેશનની માહિતી મોકલવામાં આવી શકે છે."</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"લોકેશન સેટિંગ વિશે વધુ જાણો"</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"લોકેશનનો ઍક્સેસ બદલવા, સેટિંગ &gt; સુરક્ષા અને પ્રાઇવસી &gt; પ્રાઇવસીના નિયંત્રણો પર જાઓ"</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"એકાઉન્ટ"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"સુરક્ષા"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"એન્ક્રિપ્શન અને ઓળખપત્રો"</string>
@@ -2017,7 +2018,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"કલર કૉન્ટ્રાસ્ટ"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"વધુ ઉચ્ચ કૉન્ટ્રાસ્ટ ટેક્સ્ટ, બટન અને આઇકનને વધુ સ્પષ્ટ રીતે જોઈ શકાવા યોગ્ય બનાવે છે. તમારા માટે શ્રેષ્ઠતમ દેખાતો કૉન્ટ્રાસ્ટ પસંદ કરો."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"અમુક ઍપ કદાચ રંગ અને ટેક્સ્ટના કૉન્ટ્રાસ્ટ સંબંધિત બધા સેટિંગને સપોર્ટ ન કરે, તેવું બની શકે છે"</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"તમારી સ્ક્રીનના બૅકગ્રાઉન્ડ રંગ મુજબ રંગો અને ટેક્સ્ટની ગોઠવણ કરો"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"પ્રીવ્યૂ કરો"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"હેલન, ઍડમ"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"2 દિવસ અગાઉ"</string>
@@ -4990,8 +4990,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"UWBનો ઉપયોગ કરવા માટે એરપ્લેન મોડ બંધ કરો"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"હાલના લોકેશનમાં UWB અનુપલબ્ધ છે"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"Thread"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"સ્માર્ટ ઘરના વિક્ષેપરહિત અનુભવ માટે, Threadનો ઉપયોગ કરીને સુસંગત ડિવાઇસ સાથે કનેક્ટ કરો"</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"Threadનો ઉપયોગ કરવા માટે એરપ્લેન મોડ બંધ કરો"</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"કૅમેરાનો ઍક્સેસ"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"માઇક્રોફોનનો ઍક્સેસ"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"ઍપ અને સેવાઓ માટે"</string>
