--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"ახლომდებარე მოწყობილობების ნებართვების მქონე აპებს შეუძლია დაკავშირებული მოწყობილობების პოზიციის განსაზღვრა."</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"აპებისა და სერვისების მდებარეობაზე წვდომა გამორთულია. თქვენი მოწყობილობის მდებარეობა მაინც გაიგზავნება გადაუდებელი დახმარების სამსახურში, როცა გადაუდებელი დახმარების სამსახურის ნომერზე დარეკავთ ან ტექსტურ შეტყობინებას გაგზავნით."</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"შეიტყვეთ მეტი მდებარეობის პარამეტრების შესახებ"</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"მდებარეობის წვდომის შეცვლა: პარამეტრები &gt; უსაფრთხოება და კონფიდენციალურობა &gt; კონფიდენციალურობის მართვის პარამეტრები"</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"ანგარიშები"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"უსაფრთხოება"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"დაშიფვრა და ავტორიზაციის მონაცემები"</string>
@@ -2017,7 +2018,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"ფერთა კონტრასტი"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"მაღალი კონტრასტი ტექსტს, ღილაკებსა და ხატულებს მეტად გამოკვეთს. აირჩიეთ თქვენთვის საუკეთესო კონტრასტი."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"ზოგიერთ აპს არ აქვს ყველა ფერისა და ტექსტის კონტრასტის პარამეტრების მხარდაჭერა"</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"დაარეგულირეთ ფერები და ტექსტი თქვენი ეკრანის ფონის ფერთან მიმართებაში"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"გადახედვა"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"ჰელენ, ადამ"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"2 დღის წინ"</string>
@@ -4990,8 +4990,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"UWB-ის გამოსაყენებლად გამორთეთ თვითმფრინავის რეჟიმი"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"UWB არ არის ხელმისაწვდომი მიმდინარე ადგილას"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"Thread"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"გონიერი სახლის უნაკლო გამოცდილების მისაღებად, Thread-ის გამოყენებით დაუკავშირდით თავსებად მოწყობილობებს"</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"Thread-ის გამოსაყენებლად გამორთეთ თვითმფრინავის რეჟიმი"</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"კამერაზე წვდომა"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"მიკროფონზე წვდომა"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"აპებისა და სერვისებისთვის"</string>
