--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"Маңайдағы құрылғыларды пайдалану рұқсаты бар қолданбалар телефонға жалғанған құрылғылардың тиісті орнын анықтай алады."</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"Қолданбалар мен қызметтер үшін локацияны пайдалану рұқсаты өшірулі. Бірақ құтқару қызметіне қоңырау шалатын немесе хабар жіберетін болсаңыз, құрылғыңыздың локациясы беріледі."</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"Локация параметрлері туралы толық ақпарат"</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"Локацияны пайдалану рұқсатын өзгерту үшін \"Параметрлер &gt; Қауіпсіздік және құпиялық &gt; Құпиялық параметрлері\" бөліміне өтіңіз."</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"Аккаунттар"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"Қауіпсіздік"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"Шифрлау және тіркелу деректері"</string>
@@ -2017,7 +2018,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Түс конрасты"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Жоғары контраст мәтінді, түймелерді және белгішелерді ерекшелейді. Өзіңізге ұнайтын контрасты таңдаңыз."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Кейбір қолданбалар барлық түс және мәтін контрасты параметрін қолдамауы мүмкін."</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"Түстер мен мәтінді экран фонына сәйкестендіріп реттеу"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"Алғы көрініс"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Хелен, Адам"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"2 күн бұрын"</string>
@@ -2572,8 +2572,7 @@
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Батарея жұмысының ұзақтығын арттыру"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Толық зарядталғанда өшіру"</string>
     <string name="battery_saver_sticky_title_percentage" msgid="1178162022087559148">"<xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> болғанда өшіру"</string>
-    <!-- no translation found for battery_saver_sticky_description_new (8543277078136947874) -->
-    <skip />
+    <string name="battery_saver_sticky_description_new" msgid="8543277078136947874">"Батарея заряды <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> деңгейінен асқанда, батареяны үнемдеу режимі өшіріледі."</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Қосу"</string>
@@ -4804,46 +4803,27 @@
     <string name="work_policy_privacy_settings" msgid="2702644843505242596">"Жұмыс саясатыңыз туралы ақпарат"</string>
     <string name="work_policy_privacy_settings_summary" msgid="690118670737638405">"АТ әкімшісі басқаратын параметрлер"</string>
     <string name="track_frame_time_keywords" msgid="7885340257945922239">"GPU"</string>
-    <!-- no translation found for enable_16k_pages (8001470927566110689) -->
-    <skip />
-    <!-- no translation found for enable_16k_pages_summary (1964363364670306912) -->
-    <skip />
-    <!-- no translation found for confirm_enable_16k_pages_title (1286925577014793351) -->
-    <skip />
-    <!-- no translation found for confirm_enable_16k_pages_text (570198382662424714) -->
-    <skip />
-    <!-- no translation found for confirm_enable_4k_pages_title (3210360137887034659) -->
-    <skip />
-    <!-- no translation found for confirm_enable_4k_pages_text (155070605667160083) -->
-    <skip />
+    <string name="enable_16k_pages" msgid="8001470927566110689">"16 КБ бет өлшемін жүктеу"</string>
+    <string name="enable_16k_pages_summary" msgid="1964363364670306912">"Құрылғыны 16 КБ бетті қолдайтын ядромен жүктеу"</string>
+    <string name="confirm_enable_16k_pages_title" msgid="1286925577014793351">"4 КБ режимінен 16 КБ режиміне ауысу"</string>
+    <string name="confirm_enable_16k_pages_text" msgid="570198382662424714">"4 КБ ядромен жұмыс істейтін бетке тәуелсіз режимдесіз және 16 КБ режимге ауысып жатырсыз. Бұл режимде жұмыс істеген кезде, бағдарламалық құрал тұтастығына кепілдік берілмейді және жүктегіш құлпы ашылған кезде, телефоныңызда сақталған деректерге қауіп төнуі мүмкін. Бұндайда құрылғы өшіріліп қосылады. Осы режимдерде кейбір функциялар өшірілетіндіктен, кейбір қолданбалар жұмыс істемеуі мүмкін. Құрылғыны жұмыс күйіне қайтару үшін 4 КБ режиміне қайта ауысып, құрылғыны зауыттық параметрлерге қайтаратын жүктегішті құлыптау керек. Құрылғы Android жүйесіне жүктелген кезде, Әзірлеуші опцияларынан жүктегіш құлпын ашу параметрін өшіріңіз."</string>
+    <string name="confirm_enable_4k_pages_title" msgid="3210360137887034659">"16 КБ режимінен 4 КБ режиміне ауысу"</string>
+    <string name="confirm_enable_4k_pages_text" msgid="155070605667160083">"16 КБ ядромен жұмыс істейтін бетке тәуелсіз режимдесіз және 4 КБ режимге ауысып жатырсыз. Бұл режимде жұмыс істеген кезде, бағдарламалық құрал тұтастығына кепілдік берілмейді және жүктегіш құлпы ашылған кезде, телефоныңызда сақталған деректерге қауіп төнуі мүмкін. Бұндайда құрылғы өшіріліп қосылады. Осы режимдерде кейбір функциялар өшірілетіндіктен, кейбір қолданбалар жұмыс істемеуі мүмкін. Құрылғыны жұмыс күйіне қайтару үшін құрылғыны зауыттық параметрлерге қайтаратын жүктегішті құлыптау керек. Құрылғы Android жүйесіне жүктелген кезде, Әзірлеуші опцияларынан жүктегіш құлпын ашу параметрін өшіріңіз."</string>
     <string name="toast_16k_update_failed_text" msgid="8888858987184345567">"Ядро 16 КБ-тық беттермен үйлесімді ядроға жаңартылмады."</string>
     <string name="progress_16k_ota_title" msgid="2117218313875523741">"Өзгерту қолданылып жатыр"</string>
-    <!-- no translation found for confirm_format_ext4_title (6696191800594435577) -->
-    <skip />
-    <!-- no translation found for confirm_format_ext4_text (7940372488624630214) -->
-    <skip />
-    <!-- no translation found for format_ext4_failure_toast (8059453995800471549) -->
-    <skip />
-    <!-- no translation found for confirm_oem_unlock_for_16k_title (5374451262432025419) -->
-    <skip />
-    <!-- no translation found for confirm_oem_unlock_for_16k_text (3583604865119937957) -->
-    <skip />
-    <!-- no translation found for page_agnostic_4k_pages_title (1184703958249093215) -->
-    <skip />
-    <!-- no translation found for page_agnostic_4k_pages_text_short (2894243902906666242) -->
-    <skip />
-    <!-- no translation found for page_agnostic_4k_pages_text (8284806650260868833) -->
-    <skip />
-    <!-- no translation found for page_agnostic_16k_pages_title (7762533464569818498) -->
-    <skip />
-    <!-- no translation found for page_agnostic_16k_pages_text_short (269039281591806585) -->
-    <skip />
-    <!-- no translation found for page_agnostic_16k_pages_text (6208765386837706582) -->
-    <skip />
-    <!-- no translation found for page_agnostic_notification_channel_name (1658444283036376361) -->
-    <skip />
-    <!-- no translation found for page_agnostic_notification_action (2309805437430150456) -->
-    <skip />
+    <string name="confirm_format_ext4_title" msgid="6696191800594435577">"Құрылғыны ext4 жүйесіне қайта форматтау керек пе? (16 КБ режимі үшін қажет)"</string>
+    <string name="confirm_format_ext4_text" msgid="7940372488624630214">"16 КБ әзірлеуші опциясын пайдаланбас бұрын, құрылғының деректер бөлігін ext4 файл жүйесіне түрлендіру керек. Бұл режимде жұмыс істеген кезде, бағдарламалық құрал тұтастығына кепілдік берілмейді және жүктегіш құлпы ашылған кезде, телефоныңызда сақталған деректерге қауіп төнуі мүмкін. 16 КБ опциясын қосқаннан кейін, құрылғыны тағы бір рет өшіріп қосу керек. Осы режимге өткеннен кейін, 4 КБ және 16 КБ режимдері арасында бір рет өшіріп қосу арқылы ауыса аласыз. Осы режимдерде кейбір функциялар өшірілетіндіктен, кейбір қолданбалар жұмыс істемеуі мүмкін. Құрылғыны жұмыс күйіне қайтару үшін 4 КБ режиміне қайта ауысып, құрылғыны зауыттық параметрлерге қайтаратын жүктегішті құлыптау керек. Құрылғы Android жүйесіне жүктелген кезде, Әзірлеуші опцияларынан жүктегіш құлпын ашу параметрін өшіріңіз. Растағаннан кейін, құрылғы тазартылып, файл жүйесі ext4 түріне өзгертіледі. Болған соң, қайта оралып, 16 КБ режимін қайта қосыңыз."</string>
+    <string name="format_ext4_failure_toast" msgid="8059453995800471549">"Құрылғыны қайта форматтау және деректер бөлімін ext4 жүйесіне тазарту мүмкін болмады."</string>
+    <string name="confirm_oem_unlock_for_16k_title" msgid="5374451262432025419">"16 КБ режимі үшін жүктегіш құлпын ашу керек"</string>
+    <string name="confirm_oem_unlock_for_16k_text" msgid="3583604865119937957">"16 КБ әзірлеуші опциясын пайдаланбас бұрын, құрылғыдағы жүктегіш құлпын ашу керек. Бұл режимде жұмыс істеген кезде, бағдарламалық құрал тұтастығына кепілдік берілмейді және жүктегіш құлпы ашылған кезде, телефоныңызда сақталған деректерге қауіп төнуі мүмкін. Пайдаланушының барлық дерегі мен параметрі 16 КБ режимі қосылған кезде тазартылады. Жүктегіш құлпын ашқан соң, 16 КБ опциясын қосу үшін құрылғыны екі рет өшіріп қосу керек. Осы режимге өткеннен кейін, 4 КБ және 16 КБ режимдері арасында бір рет өшіріп қосу арқылы ауыса аласыз. Осы режимдерде кейбір функциялар өшірілетіндіктен, кейбір қолданбалар жұмыс істемеуі мүмкін. Құрылғыны жұмыс күйіне қайтару үшін 4 КБ режиміне қайта ауысып, (құрылғыны зауыттық параметрлерге қайтаратын) жүктегішті құлыптау керек. Жүктегіш құлпын ашып, қайталап көріңіз. Осыған қатысты нұсқауларды мына сілтеме арқылы көре аласыз: &lt;a href=\"https://source.android.com/docs/core/architecture/bootloader/locking_unlocking\"&gt;https://source.android.com/docs/core/architecture/bootloader/locking_unlocking&lt;/a&gt;"</string>
+    <string name="page_agnostic_4k_pages_title" msgid="1184703958249093215">"Бетке тәуелсіз 4 КБ режимін пайдалану"</string>
+    <string name="page_agnostic_4k_pages_text_short" msgid="2894243902906666242">"Бетке тәуелсіз режимдегі 4 КБ режимінде жұмыс істеп отырсыз. Бұл режимде жұмыс істеген кезде, бағдарламалық құрал тұтастығына кепілдік берілмейді және жүктегіш құлпы ашылған кезде, телефоныңызда сақталған деректерге қауіп төнуі мүмкін. Осы режимдерде кейбір функциялар өшірілетіндіктен, кейбір қолданбалар жұмыс істемеуі мүмкін. Жұмыс режиміне қайта оралу үшін құрылғының жүктегішін құлыптау керек. Қосымша ақпарат алу үшін түртіңіз."</string>
+    <string name="page_agnostic_4k_pages_text" msgid="8284806650260868833">"Бетке тәуелсіз режимдегі 4 КБ режимінде жұмыс істеп отырсыз. Бұл режимде жұмыс істеген кезде, бағдарламалық құрал тұтастығына кепілдік берілмейді және жүктегіш құлпы ашылған кезде, телефоныңызда сақталған деректерге қауіп төнуі мүмкін. Осы режимдерде кейбір функциялар өшірілетіндіктен, кейбір қолданбалар жұмыс істемеуі мүмкін. Жұмыс режиміне қайта оралу үшін құрылғының жүктегішін құлыптау керек. Мұндайда құрылғы қайтадан зауыттық параметрлерге қайтарылып, жұмыс параметрлері қалпына келтіріледі. Құрылғы Android жүйесіне жүктелген кезде, Әзірлеуші опцияларынан жүктегіш құлпын ашу параметрін өшіріңіз. Құрылғыда Android жүйесі жүктелмесе немесе дұрыс жұмыс істемесе, құрылғыны &lt;a href=\"https://developers.google.com/android/images\"&gt;https://developers.google.com/android/images&lt;/a&gt; немесе &lt;a href=\"https://flash.android.com/back-to-public\"&gt;https://flash.android.com/back-to-public&lt;/a&gt; сілтемесіндегі зауыттық образдармен қайта бағдарламалап, \"Құрылғыны тазарту\", \"Жүктегішті құлыптау\" және \"Барлық бөлікті бағдарламау\" опцияларын таңдаңыз."</string>
+    <string name="page_agnostic_16k_pages_title" msgid="7762533464569818498">"Бетке тәуелсіз 16 КБ режимін пайдалану"</string>
+    <string name="page_agnostic_16k_pages_text_short" msgid="269039281591806585">"Бетке тәуелсіз режимдегі 16 КБ режимінде жұмыс істеп отырсыз. Бұл режимде жұмыс істеген кезде, бағдарламалық құрал тұтастығына кепілдік берілмейді және жүктегіш құлпы ашылған кезде, телефоныңызда сақталған деректерге қауіп төнуі мүмкін. Осы режимдерде кейбір функциялар өшірілетіндіктен, кейбір қолданбалар жұмыс істемеуі мүмкін. Жұмыс күйіне қайта оралу үшін 4 К режиміне қайта ауысып, құрылғының жүктегішін құлыптау керек. Қосымша ақпарат алу үшін түртіңіз."</string>
+    <string name="page_agnostic_16k_pages_text" msgid="6208765386837706582">"Бетке тәуелсіз режимдегі 16 КБ режимінде жұмыс істеп отырсыз. Бұл режимде жұмыс істеген кезде, бағдарламалық құрал тұтастығына кепілдік берілмейді және жүктегіш құлпы ашылған кезде, телефоныңызда сақталған деректерге қауіп төнуі мүмкін. Осы режимдерде кейбір функциялар өшірілетіндіктен, кейбір қолданбалар жұмыс істемеуі мүмкін. Жұмыс күйіне қайта оралу үшін 4 К режиміне қайта ауысып, құрылғының жүктегішін құлыптау керек. Мұндайда құрылғы қайтадан зауыттық параметрлерге қайтарылып, жұмыс параметрлері қалпына келтіріледі. Құрылғы Android жүйесіне жүктелген кезде, Әзірлеуші опцияларынан жүктегіш құлпын ашу параметрін өшіріңіз. Құрылғыда Android жүйесі жүктелмесе немесе дұрыс жұмыс істемесе, құрылғыны &lt;a href=\"https://developers.google.com/android/images\"&gt;https://developers.google.com/android/images&lt;/a&gt; немесе &lt;a href=\"https://flash.android.com/back-to-public\"&gt;https://flash.android.com/back-to-public&lt;/a&gt; сілтемесіндегі зауыттық образдармен қайта бағдарламалап, \"Құрылғыны тазарту\", \"Жүктегішті құлыптау\" және \"Барлық бөлікті бағдарламау\" опцияларын таңдаңыз."</string>
+    <string name="page_agnostic_notification_channel_name" msgid="1658444283036376361">"Бетке тәуелсіз 16 КБ режимі"</string>
+    <string name="page_agnostic_notification_action" msgid="2309805437430150456">"Толық ақпарат"</string>
     <string name="bug_report_handler_title" msgid="713439959113250125">"Қате туралы есеп өңдеу құралы"</string>
     <string name="bug_report_handler_picker_footer_text" msgid="4935758328366585673">"Құрылғыдағы қате туралы есепті жіберу үшін жылдам әрекетпен қандай қолданба ашылатынын анықтайды."</string>
     <string name="personal_profile_app_subtext" msgid="5586060806997067676">"Жеке"</string>
@@ -5010,8 +4990,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"UWB технологиясын пайдалану үшін ұшақ режимі өшіріледі."</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"Қазіргі локацияда кеңжолақты байланыс жоқ."</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"Тізбек"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"Үздіксіз смарт үй тәжірибесі үшін Тізбек протоколы арқылы үйлесімді құрылғыларға қосылыңыз."</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"Тізбек протоколын пайдалану үшін ұшақ режимі өшіріледі."</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"Камераны пайдалану"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"Микрофонды пайдалану"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Қолданбалар мен қызметтерге арналған."</string>
