--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"Programos, turinčios netoliese esančių įrenginių leidimą, gali nustatyti apytikslį atstumą iki prijungtų įrenginių."</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"Programų ir paslaugų prieiga prie vietovės išjungta. Įrenginio vietovės informacija vis tiek gali būti siunčiama pagalbos tarnyboms skambinant ar siunčiant teksto pranešimą pagalbos numeriu."</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"Sužinokite daugiau apie vietovės nustatymus."</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"Jei norite pakeisti prieigą prie vietovės, eikite į skiltį „Nustatymai“ &gt; „Sauga ir privatumas“ &gt; „Privatumo valdikliai“"</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"Paskyros"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"Sauga"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"Šifruotė ir prisijungimo duomenys"</string>
@@ -2017,7 +2018,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Spalvų kontrastas"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Naudojant didesnį kontrastą, tekstas, mygtukai ir piktogramos išsiskiria labiau. Pasirinkite jūsų akiai patraukliausią kontrastą."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Kai kuriose programose gali būti palaikomos ne visos spalvos ir teksto kontrasto nustatymai"</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"Reguliuokite, kaip spalvos ir tekstas atrodo pasirinktos spalvos ekrano fone"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"Peržiūra"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Helena, Adamas"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"Prieš 2 dienas"</string>
@@ -4992,8 +4992,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"Norėdami naudoti UWB, išjunkite lėktuvo režimą"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"UWB ryšys nepasiekiamas dabartinėje vietovėje"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"Thread"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"Susiekite su suderinamais įrenginiais naudodami „Thread“ ir mėgaukitės sklandžiomis išmaniųjų namų funkcijomis"</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"Jei norite naudoti „Thread“, išjunkite lėktuvo režimą"</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"Prieiga prie fotoaparato"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"Prieiga prie mikrofono"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Programos ir paslaugos"</string>
