--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"Апликациите со дозвола за пристап до уредите во близина може да ја утврдуваат релативната положба на поврзаните уреди."</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"Пристапот до локацијата е исклучен за апликации и услуги. Сепак, можно е локацијата на уредот да се испрати до службите за спасување во итни случаи кога ќе ги повикате или кога ќе испратите порака на број за итни случаи."</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"Дознајте повеќе за „Поставките за локација“"</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"Променете го пристапот до локацијата во „Поставки &lt; Безбед. и прив. &lt; Контроли на прив.“"</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"Сметки"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"Безбедност"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"Шифрирање и акредитиви"</string>
@@ -2017,7 +2018,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Контраст на бои"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Повисокиот контраст прави текстот, копчињата и иконите да се истакнуваат повеќе. Изберете го контрастот што ви изгледа најдобро."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Некои апликации можеби не ги поддржуваат сите поставки за контраст на бои и текст"</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"Приспособете како да изгледаат боите и текстот во однос на бојата на заднината на вашиот екран"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"Преглед"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Хелен, Адам"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"Пред 2 дена"</string>
@@ -2572,8 +2572,7 @@
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Продолжете го траењето на батеријата"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Исклучи кога ќе се наполни"</string>
     <string name="battery_saver_sticky_title_percentage" msgid="1178162022087559148">"Исклучи на <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
-    <!-- no translation found for battery_saver_sticky_description_new (8543277078136947874) -->
-    <skip />
+    <string name="battery_saver_sticky_description_new" msgid="8543277078136947874">"„Штедачот на батерија“ ќе се исклучи кога батеријата ќе се наполни над <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Вклучи"</string>
@@ -2685,10 +2684,10 @@
     <string name="adaptive_connectivity_switch_on" msgid="3653067561620745493">"Вклучено"</string>
     <string name="adaptive_connectivity_switch_off" msgid="5076172560836115265">"Исклучено"</string>
     <string name="adaptive_connectivity_main_switch_title" msgid="261045483524512420">"Користи „Адаптивно поврзување“"</string>
-    <string name="cellular_security_title" msgid="5562899485544677941">"Обезбедување на мобилна мрежа"</string>
+    <string name="cellular_security_title" msgid="5562899485544677941">"Безбедност на мобилна мрежа"</string>
     <string name="cellular_security_summary" msgid="1893770670709928113">"Тип мрежа, шифрирање, контроли за известувања"</string>
     <string name="cellular_security_top_intro" msgid="6749166804080092892">"Овие поставки помагаат да се заштитат вашите повици, пораки и податоци од застарени или нешифрирани мрежи што може да доведат до кражба или надзор на податоците"</string>
-    <string name="cellular_security_settings_title" msgid="7779141923670352595">"Обезбедување на мобилна мрежа"</string>
+    <string name="cellular_security_settings_title" msgid="7779141923670352595">"Безбедност на мобилна мрежа"</string>
     <string name="cellular_security_notifications" msgid="4619728340612184944">"Известувања"</string>
     <string name="cellular_security_notifications_controller_title" msgid="4853056963523277847">"Известувања за мрежата"</string>
     <string name="cellular_security_notifications_controller_summary" msgid="8339863845393759958">"Добијте известување кога вашиот уред ќе се поврзе на нешифрирана мрежа или кога мрежата ќе го снима уникатниот ID на уредот или на SIM-картичката"</string>
@@ -4804,46 +4803,27 @@
     <string name="work_policy_privacy_settings" msgid="2702644843505242596">"Информации за работните правила"</string>
     <string name="work_policy_privacy_settings_summary" msgid="690118670737638405">"Вашиот администратор за ИТ управува со поставките"</string>
     <string name="track_frame_time_keywords" msgid="7885340257945922239">"GPU"</string>
-    <!-- no translation found for enable_16k_pages (8001470927566110689) -->
-    <skip />
-    <!-- no translation found for enable_16k_pages_summary (1964363364670306912) -->
-    <skip />
-    <!-- no translation found for confirm_enable_16k_pages_title (1286925577014793351) -->
-    <skip />
-    <!-- no translation found for confirm_enable_16k_pages_text (570198382662424714) -->
-    <skip />
-    <!-- no translation found for confirm_enable_4k_pages_title (3210360137887034659) -->
-    <skip />
-    <!-- no translation found for confirm_enable_4k_pages_text (155070605667160083) -->
-    <skip />
+    <string name="enable_16k_pages" msgid="8001470927566110689">"Рестартирај со страница од 16 KB"</string>
+    <string name="enable_16k_pages_summary" msgid="1964363364670306912">"Рестарт. со поддржан кернел со страници од 16 KB"</string>
+    <string name="confirm_enable_16k_pages_title" msgid="1286925577014793351">"Префрлете се од режим од 4 KB на режим од 16 KB"</string>
+    <string name="confirm_enable_16k_pages_text" msgid="570198382662424714">"Вие сте во режимот за компатибилност со мемориски страници којшто извршува кернел од 4 KB и се префрлате на режимот од 16 KB. Во овој режим не може да се гарантира интегритетот на софтверот, а податоците складирани на телефонот додека е отклучен вчитувачот на систем може да бидат изложени на ризик. Ова ќе го рестартира уредот. Некои функции ќе бидат оневозможени во овие режими, па некои апликации можеби нема да функционираат. За да го вратите уредот во работен режим, ќе треба да се вратите во режимот од 4 KB и да го заклучите вчитувачот на систем, којшто го ресетира уредот на фабрички поставки. Откако уредот успешно ќе се подигне во Android, оневозможете го отклучувањето OEM во „Програмерски опции“."</string>
+    <string name="confirm_enable_4k_pages_title" msgid="3210360137887034659">"Префрлете се од режим од 16 KB на режим од 4 KB"</string>
+    <string name="confirm_enable_4k_pages_text" msgid="155070605667160083">"Вие сте во режимот за компатибилност со мемориски страници којшто извршува кернел од 16 KB и се префрлате на режимот од 4 KB. Во овој режим не може да се гарантира интегритетот на софтверот, а податоците складирани на телефонот додека е отклучен вчитувачот на систем може да бидат изложени на ризик. Ова ќе го рестартира уредот. Некои функции ќе бидат оневозможени во овие режими, па некои апликации можеби нема да функционираат. За да го вратите уредот во работен режим, ќе треба да го заклучите вчитувачот на систем, којшто го ресетира уредот на фабрички поставки. Откако уредот успешно ќе се подигне во Android, оневозможете го отклучувањето OEM во „Програмерски опции“."</string>
     <string name="toast_16k_update_failed_text" msgid="8888858987184345567">"Не можеше да се ажурира кернелот на компатибилен кернел со страници од 16 KB."</string>
     <string name="progress_16k_ota_title" msgid="2117218313875523741">"Се применува промената"</string>
-    <!-- no translation found for confirm_format_ext4_title (6696191800594435577) -->
-    <skip />
-    <!-- no translation found for confirm_format_ext4_text (7940372488624630214) -->
-    <skip />
-    <!-- no translation found for format_ext4_failure_toast (8059453995800471549) -->
-    <skip />
-    <!-- no translation found for confirm_oem_unlock_for_16k_title (5374451262432025419) -->
-    <skip />
-    <!-- no translation found for confirm_oem_unlock_for_16k_text (3583604865119937957) -->
-    <skip />
-    <!-- no translation found for page_agnostic_4k_pages_title (1184703958249093215) -->
-    <skip />
-    <!-- no translation found for page_agnostic_4k_pages_text_short (2894243902906666242) -->
-    <skip />
-    <!-- no translation found for page_agnostic_4k_pages_text (8284806650260868833) -->
-    <skip />
-    <!-- no translation found for page_agnostic_16k_pages_title (7762533464569818498) -->
-    <skip />
-    <!-- no translation found for page_agnostic_16k_pages_text_short (269039281591806585) -->
-    <skip />
-    <!-- no translation found for page_agnostic_16k_pages_text (6208765386837706582) -->
-    <skip />
-    <!-- no translation found for page_agnostic_notification_channel_name (1658444283036376361) -->
-    <skip />
-    <!-- no translation found for page_agnostic_notification_action (2309805437430150456) -->
-    <skip />
+    <string name="confirm_format_ext4_title" msgid="6696191800594435577">"Да се форматира уредот повторно во ext4? (неопходно за режим од 16 KB)"</string>
+    <string name="confirm_format_ext4_text" msgid="7940372488624630214">"Пред да се користи програмерската опција од 16 KB, партицијата со податоци на уредов треба да се конвертира во ext4. Во овој режим не може да се гарантира интегритетот на софтверот, а податоците складирани на телефонот додека е отклучен вчитувачот на систем може да бидат изложени на ризик. За да се активира опцијата од 16 KB, ќе биде потребно уште едно рестартирање по ова. Штом ќе влезете во овој режим, може да се префрлате меѓу режимите од 4 KB и 16 KB со едно рестартирање. Некои функции ќе бидат оневозможени во овие режими, па некои апликации можеби нема да функционираат. За да го вратите уредот во работен режим, ќе треба да се вратите во режимот од 4 KB, па да го заклучите вчитувачот на систем, којшто го ресетира уредот на фабрички поставки. Откако уредот успешно ќе се подигне во Android, оневозможете го отклучувањето OEM во „Програмерски опции“. По потврдувањето, уредот ќе се избрише трајно, а системот на датотеки ќе се промени во ext4. Кога ќе заврши ова, вратете се за да овозможите режим од 16 KB повторно."</string>
+    <string name="format_ext4_failure_toast" msgid="8059453995800471549">"Неуспешно повторно форматирање и трајно бришење на партицијата со податоци во ext4."</string>
+    <string name="confirm_oem_unlock_for_16k_title" msgid="5374451262432025419">"Вчитувачот на систем треба да се отклучи за режим од 16 KB"</string>
+    <string name="confirm_oem_unlock_for_16k_text" msgid="3583604865119937957">"Пред да може да се користи програмерската опција од 16 KB, треба да се отклучи вчитувачот на систем на уредов. Во овој режим не може да се гарантира интегритетот на софтверот, а податоците складирани на телефонот додека е отклучен вчитувачот на систем може да бидат изложени на ризик. При активирањето режим од 16 KB, ќе се избришат трајно сите кориснички податоци и поставки. Откако ќе се отклучи вчитувачот на систем, ќе бидат потребни две рестартирања за да се активира опцијата од 16 KB. Штом ќе влезете во овој режим, може да се префрлате меѓу режимите од 4 KB и 16 KB со едно рестартирање. Некои функции ќе бидат оневозможени во овие режими, па некои апликации можеби нема да функционираат. За да го вратите уредот во работен режим, ќе треба да се вратите во режимот од 4 KB, па да го заклучите OEM/вчитувачот на систем, којшто го ресетира уредот на фабрички поставки. Отклучете го вчитувачот на систем, па обидете се повторно. Инструкции како да го направите ова може да најдете на &lt;a href=\"https://source.android.com/docs/core/architecture/bootloader/locking_unlocking\"&gt;https://source.android.com/docs/core/architecture/bootloader/locking_unlocking&lt;/a&gt;"</string>
+    <string name="page_agnostic_4k_pages_title" msgid="1184703958249093215">"Се користи режимот за компатибилност со мемориски страници од 4 KB"</string>
+    <string name="page_agnostic_4k_pages_text_short" msgid="2894243902906666242">"Вие сте во режимот од 4 KB на режимот за компатибилност со мемориски страници. Во овој режим не може да се гарантира интегритетот на софтверот, а податоците складирани на телефонот додека е отклучен вчитувачот на систем може да бидат изложени на ризик. Некои функции ќе бидат оневозможени во овие режими, па некои апликации можеби нема да функционираат. За да влезете во работен режим повторно, мора да го заклучите вчитувачот на систем на уредот. Допрете за да прочитате повеќе."</string>
+    <string name="page_agnostic_4k_pages_text" msgid="8284806650260868833">"Вие сте во режимот од 4 KB на режимот за компатибилност со мемориски страници. Во овој режим не може да се гарантира интегритетот на софтверот, а податоците складирани на телефонот додека е отклучен вчитувачот на систем може да бидат изложени на ризик. Некои функции ќе бидат оневозможени во овие режими, па некои апликации можеби нема да функционираат. За да влезете во работен режим повторно, мора да го заклучите вчитувачот на систем на уредот. Ова ќе го ресетира уредот на фабрички поставки повторно и ќе го врати на поставките за работен режим. Откако уредот успешно ќе се подигне во Android, оневозможете го отклучувањето OEM во „Програмерски опции“. Ако уредот не може да се подигне во Android или е нестабилен, преинсталирајте ги најновите фабрички слики на уредот од &lt;a href=\"https://developers.google.com/android/images\"&gt;https://developers.google.com/android/images&lt;/a&gt; или користете &lt;a href=\"https://flash.android.com/back-to-public\"&gt;https://flash.android.com/back-to-public&lt;/a&gt; и изберете „Трајно избриши ги податоците на уредот“, „Заклучи го вчитувачот на системот“ и „Force Flash all partitions“ (Наметни инсталирање на сите партиции)."</string>
+    <string name="page_agnostic_16k_pages_title" msgid="7762533464569818498">"Се користи режимот за компатибилност со мемориски страници од 16 KB"</string>
+    <string name="page_agnostic_16k_pages_text_short" msgid="269039281591806585">"Вие сте во режимот од 16 KB на режимот за компатибилност со мемориски страници. Во овој режим не може да се гарантира интегритетот на софтверот, а податоците складирани на телефонот додека е отклучен вчитувачот на систем може да бидат изложени на ризик. Некои функции ќе бидат оневозможени во овие режими, па некои апликации можеби нема да функционираат. За да влезете во работен режим повторно, мора да се вратите во режим од 4 KB, па да го заклучите вчитувачот на систем на уредот. Допрете за да прочитате повеќе."</string>
+    <string name="page_agnostic_16k_pages_text" msgid="6208765386837706582">"Вие сте во режимот од 16 KB на режимот за компатибилност со мемориски страници. Во овој режим не може да се гарантира интегритетот на софтверот, а податоците складирани на телефонот додека е отклучен вчитувачот на систем може да бидат изложени на ризик. Некои функции ќе бидат оневозможени во овие режими, па некои апликации можеби нема да функционираат. За да влезете во работен режим повторно, мора да се вратите во режим од 4 KB, па да го заклучите вчитувачот на систем на уредот. Ова ќе го ресетира уредот на фабрички поставки повторно и ќе го врати на поставките за работен режим. Откако уредот успешно ќе се подигне во Android, оневозможете го отклучувањето OEM во „Програмерски опции“. Ако уредот не може да се подигне во Android или е нестабилен, преинсталирајте ги најновите фабрички слики на уредот од &lt;a href=\"https://developers.google.com/android/images\"&gt;https://developers.google.com/android/images&lt;/a&gt; или користете &lt;a href=\"https://flash.android.com/back-to-public\"&gt;https://flash.android.com/back-to-public&lt;/a&gt; и изберете „Трајно избриши ги податоците на уредот“, „Заклучи го вчитувачот на системот“ и „Force Flash all partitions“ (Наметни инсталирање на сите партиции)."</string>
+    <string name="page_agnostic_notification_channel_name" msgid="1658444283036376361">"Режим за компатибилност со мемориски страници од 16 KB"</string>
+    <string name="page_agnostic_notification_action" msgid="2309805437430150456">"Прочитајте повеќе"</string>
     <string name="bug_report_handler_title" msgid="713439959113250125">"Ракувач со извештајот за грешки"</string>
     <string name="bug_report_handler_picker_footer_text" msgid="4935758328366585673">"Одредува која апликација ќе ракува со кратенката за извештајот за грешки на уредот."</string>
     <string name="personal_profile_app_subtext" msgid="5586060806997067676">"Лични"</string>
@@ -5010,8 +4990,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"Исклучете „Авионски режим“ за да користите UWB"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"UWB е недостапен на тековната локација"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"Thread"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"За беспрекорно доживување со паметен дом, поврзувајте се со компатибилни уреди со Thread"</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"Исклучете „Авионски режим“ за да користите Thread"</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"Пристап до камерата"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"Пристап до микрофонот"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"За апликации и услуги"</string>
