--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"സമീപമുള്ള ഉപകരണങ്ങളുടെ അനുമതിയുള്ള ആപ്പുകൾക്ക്, കണക്‌റ്റ് ചെയ്‌തിരിക്കുന്ന ഉപകരണങ്ങളുടെ ആപേക്ഷിക സ്ഥാനം നിർണ്ണയിക്കാനാകും."</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"ആപ്പുകൾക്കും സേവനങ്ങൾക്കും ലൊക്കേഷൻ ആക്‌സസ് ഓഫാണ്. നിങ്ങൾ അടിയന്തര നമ്പറിലേക്ക് കോൾ ചെയ്യുമ്പോഴോ ടെക്‌സ്‌റ്റ് ചെയ്യുമ്പോഴോ നിങ്ങളുടെ ഉപകരണ ലൊക്കേഷൻ, അടിയന്തര സാഹചര്യത്തിൽ പ്രതികരിക്കുന്നവർക്ക് തുടർന്നും അയച്ചേക്കാം."</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"ലൊക്കേഷൻ ക്രമീകരണത്തെക്കുറിച്ച് കൂടുതലറിയുക"</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"ലൊക്കേഷൻ ആക്സസ് മാറ്റാൻ, ക്രമീകരണം &gt; സുരക്ഷയും സ്വകാര്യതയും &gt; സ്വകാര്യതാ നിയന്ത്രണങ്ങൾ എന്നിവ സന്ദർശിക്കുക"</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"അക്കൗണ്ടുകൾ"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"സുരക്ഷ"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"എൻക്രിപ്‌ഷനും ക്രെഡന്‍ഷ്യലുകളും"</string>
@@ -2017,7 +2018,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"കളർ കോൺട്രാസ്റ്റ്"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"ഉയർന്ന കോൺട്രാസ്റ്റ്, ടെക്സ്റ്റിനെയും ബട്ടണുകളെയും ഐക്കണുകളെയും കൂടുതൽ വേറിട്ട് നിർത്തും. നിങ്ങൾക്ക് മികച്ചതെന്ന് തോന്നുന്ന കോൺട്രാസ്റ്റ് തിരഞ്ഞെടുക്കുക."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"എല്ലാ നിറങ്ങളുടെയും ടെക്സ്റ്റിന്റെയും കോൺട്രാസ്റ്റ് ക്രമീകരണങ്ങൾക്ക് ചില ആപ്പുകളിൽ പിന്തുണയുണ്ടാകില്ല"</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"നിങ്ങളുടെ സ്ക്രീനിന്റെ പശ്ചാത്തല നിറത്തിനെതിരെ നിറങ്ങളും ടെക്സ്റ്റും ദൃശ്യമാകുന്ന രീതി ക്രമീകരിക്കുക"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"പ്രിവ്യൂ"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"ഹെലൻ, ആദം"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"2 ദിവസം മുമ്പ്"</string>
@@ -4990,8 +4990,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"UWB ഉപയോഗിക്കാൻ ഫ്ലൈറ്റ് മോഡ് ഓഫാക്കുക"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"നിലവിലെ ലൊക്കേഷനിൽ UWB ലഭ്യമല്ല"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"Thread"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"സുഗമമായ സ്മാർട്ട് ഹോം അനുഭവത്തിന്, Thread ഉപയോഗിച്ച് അനുയോജ്യമായ ഉപകരണങ്ങളിലേക്ക് കണക്റ്റ് ചെയ്യുക"</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"Thread ഉപയോഗിക്കാൻ ഫ്ലൈറ്റ് മോഡ് ഓഫാക്കുക"</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"ക്യാമറ ആക്‌സസ്"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"മൈക്രോഫോൺ ആക്‌സസ്"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"ആപ്പുകൾക്കും സേവനങ്ങൾക്കും"</string>
