--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"Додатки з дозволами на доступ до пристроїв поблизу можуть визначати відносне розташування підключених пристроїв."</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"Доступ до геоданих вимкнено для додатків і сервісів. Однак дані про місцезнаходження вашого пристрою можуть надсилатися в екстрених випадках, якщо ви зателефонуєте або надішлете SMS на екстрений номер."</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"Докладніше про доступ до геоданих"</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"Змінити доступ до геоданих: \"Налаштування\" &gt; \"Безпека й конфід.\" &gt; \"Налашт. конфід.\""</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"Облікові записи"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"Безпека"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"Шифрування й облікові дані"</string>
@@ -2017,7 +2018,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Контраст кольорів"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Якщо збільшити контраст, текст, кнопки й значки більше виділятимуться. Виберіть потрібний рівень контрасту."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Деякі додатки можуть підтримувати не всі налаштування контрасту кольорів і тексту"</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"Налаштуйте вигляд кольорів і тексту на фоні кольору екрана"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"Попередній перегляд"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Олена, Андрій"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"2 дні тому"</string>
@@ -2572,8 +2572,7 @@
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Подовжте час роботи акумулятора"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Вимикати, коли заряджено"</string>
     <string name="battery_saver_sticky_title_percentage" msgid="1178162022087559148">"Вимикати, коли акумулятор зарядиться до <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
-    <!-- no translation found for battery_saver_sticky_description_new (8543277078136947874) -->
-    <skip />
+    <string name="battery_saver_sticky_description_new" msgid="8543277078136947874">"Режим енергозбереження вимкнеться, коли рівень заряду годинника перевищить <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Увімкнути"</string>
@@ -2687,7 +2686,7 @@
     <string name="adaptive_connectivity_main_switch_title" msgid="261045483524512420">"Використовувати адаптивне підключення"</string>
     <string name="cellular_security_title" msgid="5562899485544677941">"Безпека мобільної мережі"</string>
     <string name="cellular_security_summary" msgid="1893770670709928113">"Тип мережі, шифрування, налаштування сповіщень"</string>
-    <string name="cellular_security_top_intro" msgid="6749166804080092892">"Ці налаштування допомагають захистити ваші дзвінки, повідомлення  дані в застарілих чи незашифрованих мережах, де існує ризик крадіжки даних або стеження"</string>
+    <string name="cellular_security_top_intro" msgid="6749166804080092892">"Ці налаштування допомагають захистити ваші дзвінки, повідомлення й дані в застарілих чи незашифрованих мережах, де існує ризик крадіжки даних або стеження"</string>
     <string name="cellular_security_settings_title" msgid="7779141923670352595">"Безпека мобільної мережі"</string>
     <string name="cellular_security_notifications" msgid="4619728340612184944">"Сповіщення"</string>
     <string name="cellular_security_notifications_controller_title" msgid="4853056963523277847">"Сповіщення мережі"</string>
@@ -4804,46 +4803,27 @@
     <string name="work_policy_privacy_settings" msgid="2702644843505242596">"Інформація про правила роботи"</string>
     <string name="work_policy_privacy_settings_summary" msgid="690118670737638405">"Налаштування, якими керує адміністратор вашої організації"</string>
     <string name="track_frame_time_keywords" msgid="7885340257945922239">"ГП"</string>
-    <!-- no translation found for enable_16k_pages (8001470927566110689) -->
-    <skip />
-    <!-- no translation found for enable_16k_pages_summary (1964363364670306912) -->
-    <skip />
-    <!-- no translation found for confirm_enable_16k_pages_title (1286925577014793351) -->
-    <skip />
-    <!-- no translation found for confirm_enable_16k_pages_text (570198382662424714) -->
-    <skip />
-    <!-- no translation found for confirm_enable_4k_pages_title (3210360137887034659) -->
-    <skip />
-    <!-- no translation found for confirm_enable_4k_pages_text (155070605667160083) -->
-    <skip />
+    <string name="enable_16k_pages" msgid="8001470927566110689">"Запустити з розміром сторінки 16 KБ"</string>
+    <string name="enable_16k_pages_summary" msgid="1964363364670306912">"Запустити пристрій із ядром для сторінок 16 КБ"</string>
+    <string name="confirm_enable_16k_pages_title" msgid="1286925577014793351">"Перейти з режиму 4 КБ в режим 16 KБ"</string>
+    <string name="confirm_enable_16k_pages_text" msgid="570198382662424714">"Ви працюєте в режимі, незалежному від розміру сторінок, з ядром для сторінок розміром 4 КБ, і переходите в режим із ядром для сторінок розміром 16 KБ. У цьому режимі цілісність програмного забезпечення не гарантується, і будь-які дані, що зберігаються на телефоні, поки завантажувач операційної системи розблоковано, можуть бути під загрозою. Пристрій перезапуститься. Деякі функції в цих режимах буде вимкнено, тому зможуть працювати не всі додатки. Щоб повернути пристрій у виробничий режим, вам буде потрібно повернутися в режим 4 КБ й заблокувати завантажувач операційної системи. Налаштування пристрою буде скинуто. Коли ОС Android завантажиться на пристрій, вимкніть розблокування завантажувача в параметрах розробника."</string>
+    <string name="confirm_enable_4k_pages_title" msgid="3210360137887034659">"Перейти з режиму 16 КБ у режим 4 KБ"</string>
+    <string name="confirm_enable_4k_pages_text" msgid="155070605667160083">"Ви працюєте в режимі, незалежному від розміру сторінок, з ядром для сторінок розміром 16 КБ, і переходите в режим із ядром для сторінок розміром 4 KБ. У цьому режимі цілісність програмного забезпечення не гарантується, і будь-які дані, що зберігаються на телефоні, поки завантажувач операційної системи розблоковано, можуть бути під загрозою. Пристрій перезапуститься. Деякі функції в цих режимах буде вимкнено, тому зможуть працювати не всі додатки. Щоб повернути пристрій у виробничий режим, вам буде потрібно заблокувати завантажувач операційної системи. Налаштування пристрою буде скинуто. Коли ОС Android завантажиться на пристрій, вимкніть розблокування завантажувача в параметрах розробника."</string>
     <string name="toast_16k_update_failed_text" msgid="8888858987184345567">"Не вдалося оновити ядро до сумісного зі сторінками розміром 16 КБ."</string>
     <string name="progress_16k_ota_title" msgid="2117218313875523741">"Застосування змін"</string>
-    <!-- no translation found for confirm_format_ext4_title (6696191800594435577) -->
-    <skip />
-    <!-- no translation found for confirm_format_ext4_text (7940372488624630214) -->
-    <skip />
-    <!-- no translation found for format_ext4_failure_toast (8059453995800471549) -->
-    <skip />
-    <!-- no translation found for confirm_oem_unlock_for_16k_title (5374451262432025419) -->
-    <skip />
-    <!-- no translation found for confirm_oem_unlock_for_16k_text (3583604865119937957) -->
-    <skip />
-    <!-- no translation found for page_agnostic_4k_pages_title (1184703958249093215) -->
-    <skip />
-    <!-- no translation found for page_agnostic_4k_pages_text_short (2894243902906666242) -->
-    <skip />
-    <!-- no translation found for page_agnostic_4k_pages_text (8284806650260868833) -->
-    <skip />
-    <!-- no translation found for page_agnostic_16k_pages_title (7762533464569818498) -->
-    <skip />
-    <!-- no translation found for page_agnostic_16k_pages_text_short (269039281591806585) -->
-    <skip />
-    <!-- no translation found for page_agnostic_16k_pages_text (6208765386837706582) -->
-    <skip />
-    <!-- no translation found for page_agnostic_notification_channel_name (1658444283036376361) -->
-    <skip />
-    <!-- no translation found for page_agnostic_notification_action (2309805437430150456) -->
-    <skip />
+    <string name="confirm_format_ext4_title" msgid="6696191800594435577">"Переформатувати пристрій на ext4? (Обов’язково для режиму 16 КБ)"</string>
+    <string name="confirm_format_ext4_text" msgid="7940372488624630214">"Щоб використовувати опцію 16 КБ для розробників, розділ даних на цьому пристрої потрібно конвертувати в ext4. У цьому режимі цілісність програмного забезпечення не гарантується, і будь-які дані, що зберігаються на телефоні, поки завантажувач операційної системи розблоковано, можуть бути під загрозою. Після цього для активації опції 16 КБ потрібно буде ще раз перезапустити пристрій. Коли ви перейдете в цей режим, то зможете переходити між режимами 4 КБ й 16 КБ, лише раз перезапускаючи пристрій. Деякі функції в цих режимах буде вимкнено, тому зможуть працювати не всі додатки. Щоб повернути пристрій у виробничий режим, вам буде потрібно повернутися в режим 4 КБ й заблокувати завантажувач операційної системи. Налаштування пристрою буде скинуто. Коли ОС Android завантажиться на пристрій, вимкніть розблокування завантажувача в параметрах розробника. Після підтвердження на пристрої буде очищено всі дані, а файлову систему буде змінено на ext4. Коли цей процес завершиться, знову ввімкніть опцію 16 КБ."</string>
+    <string name="format_ext4_failure_toast" msgid="8059453995800471549">"Не вдалося очистити розділ даних і переформатувати на ext4."</string>
+    <string name="confirm_oem_unlock_for_16k_title" msgid="5374451262432025419">"Для режиму 16 КБ потрібно розблокувати завантажувач операційної системи"</string>
+    <string name="confirm_oem_unlock_for_16k_text" msgid="3583604865119937957">"Щоб використовувати опцію 16 КБ для розробників, на цьому пристрої має бути розблоковано завантажувач операційної системи. У цьому режимі цілісність програмного забезпечення не гарантується, і будь-які дані, що зберігаються на телефоні, поки завантажувач операційної системи розблоковано, можуть бути під загрозою. Під час активації режиму 16 КБ усі дані й налаштування користувача буде очищено. Коли завантажувач операційної системи буде розблоковано, для активації режиму 16 КБ потрібно буде перезапустити пристрій двічі. Коли ви перейдете в цей режим, то зможете переходити між режимами 4 КБ й 16 КБ, лише раз перезапускаючи пристрій. Деякі функції в цих режимах буде вимкнено, тому зможуть працювати не всі додатки. Щоб повернути пристрій у виробничий режим, вам буде потрібно повернутися в режим 4 КБ й заблокувати завантажувач операційної системи. Налаштування пристрою буде скинуто. Розблокуйте завантажувач операційної системи й повторіть спробу. Дізнатися, як це зробити, можна на сторінці &lt;a href=\"https://source.android.com/docs/core/architecture/bootloader/locking_unlocking\"&gt;https://source.android.com/docs/core/architecture/bootloader/locking_unlocking&lt;/a&gt;"</string>
+    <string name="page_agnostic_4k_pages_title" msgid="1184703958249093215">"Використання режиму, незалежного від розміру сторінок, з ядром для сторінок 4 КБ"</string>
+    <string name="page_agnostic_4k_pages_text_short" msgid="2894243902906666242">"Ви працюєте в режимі, незалежному від розміру сторінок, з ядром для сторінок 4 КБ. У цьому режимі цілісність програмного забезпечення не гарантується, і будь-які дані, що зберігаються на телефоні, поки завантажувач операційної системи розблоковано, можуть бути під загрозою. Деякі функції в цих режимах буде вимкнено, тому зможуть працювати не всі додатки. Щоб повернутися у виробничий режим, вам потрібно заблокувати завантажувач операційної системи пристрою. Торкніться, щоб дізнатися більше."</string>
+    <string name="page_agnostic_4k_pages_text" msgid="8284806650260868833">"Ви працюєте в режимі, незалежному від розміру сторінок, з ядром для сторінок 4 КБ. У цьому режимі цілісність програмного забезпечення не гарантується, і будь-які дані, що зберігаються на телефоні, поки завантажувач операційної системи розблоковано, можуть бути під загрозою. Деякі функції в цих режимах буде вимкнено, тому зможуть працювати не всі додатки. Щоб повернутися у виробничий режим, вам потрібно заблокувати завантажувач операційної системи пристрою. Тоді налаштування пристрою знову буде скинуто й відновляться виробничі налаштування. Коли ОС Android завантажиться на пристрій, вимкніть розблокування завантажувача в параметрах розробника. Якщо ОС Android не завантажується на пристрій або працює нестабільно, відновіть на пристрої останні заводські образи (завантаживши їх звідси: &lt;a href=\"https://developers.google.com/android/images\"&gt;https://developers.google.com/android/images&lt;/a&gt;) або перейдіть на сторінку &lt;a href=\"https://flash.android.com/back-to-public\"&gt;https://flash.android.com/back-to-public&lt;/a&gt; і виберіть \"Очистити пристрій\", \"Заблокувати завантажувач операційної системи\" й \"Примусово оновити всі розділи\"."</string>
+    <string name="page_agnostic_16k_pages_title" msgid="7762533464569818498">"Використання режиму, незалежного від розміру сторінок, з ядром для сторінок 16 КБ"</string>
+    <string name="page_agnostic_16k_pages_text_short" msgid="269039281591806585">"Ви працюєте в режимі, незалежному від розміру сторінок, з ядром для сторінок 16 КБ. У цьому режимі цілісність програмного забезпечення не гарантується, і будь-які дані, що зберігаються на телефоні, поки завантажувач операційної системи розблоковано, можуть бути під загрозою. Деякі функції в цих режимах буде вимкнено, тому зможуть працювати не всі додатки. Щоб повернутися у виробничий режим, вам потрібно знову перейти в режим 4 КБ й заблокувати завантажувач операційної системи пристрою. Торкніться, щоб дізнатися більше."</string>
+    <string name="page_agnostic_16k_pages_text" msgid="6208765386837706582">"Ви працюєте в режимі, незалежному від розміру сторінок, з ядром для сторінок 16 КБ. У цьому режимі цілісність програмного забезпечення не гарантується, і будь-які дані, що зберігаються на телефоні, поки завантажувач операційної системи розблоковано, можуть бути під загрозою. Деякі функції в цих режимах буде вимкнено, тому зможуть працювати не всі додатки. Щоб повернутися у виробничий режим, вам потрібно знову перейти в режим 4 КБ й заблокувати завантажувач операційної системи пристрою. Тоді налаштування пристрою знову буде скинуто й відновляться виробничі налаштування. Коли ОС Android завантажиться на пристрій, вимкніть розблокування завантажувача в параметрах розробника. Якщо ОС Android не завантажується на пристрій або працює нестабільно, відновіть на пристрої останні заводські образи (завантаживши їх звідси: &lt;a href=\"https://developers.google.com/android/images\"&gt;https://developers.google.com/android/images&lt;/a&gt;) або перейдіть на сторінку &lt;a href=\"https://flash.android.com/back-to-public\"&gt;https://flash.android.com/back-to-public&lt;/a&gt; і виберіть \"Очистити пристрій\", \"Заблокувати завантажувач операційної системи\" й \"Примусово оновити всі розділи\"."</string>
+    <string name="page_agnostic_notification_channel_name" msgid="1658444283036376361">"Режим, незалежний від розміру сторінок, з ядром для сторінок 16 КБ"</string>
+    <string name="page_agnostic_notification_action" msgid="2309805437430150456">"Докладніше"</string>
     <string name="bug_report_handler_title" msgid="713439959113250125">"Обробник звітів про помилки"</string>
     <string name="bug_report_handler_picker_footer_text" msgid="4935758328366585673">"Визначає, який додаток викликається ярликом звіту про помилку на пристрої."</string>
     <string name="personal_profile_app_subtext" msgid="5586060806997067676">"Особисті додатки"</string>
@@ -5012,8 +4992,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"Коли пристрій використовує UWB, режим польоту вимикається"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"Надширокосмуговий зв’язок (UWB) недоступний у цьому регіоні"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"Протокол Thread"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"Для безперебійної роботи розумного дому підключайтеся до сумісних пристроїв за допомогою протоколу Thread"</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"Коли використовується протокол Thread, режим польоту вимикається"</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"Доступ до камери"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"Доступ до мікрофона"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Для додатків і сервісів"</string>
