--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -286,7 +286,8 @@
     <string name="location_settings_footer_general" msgid="1040507068701188821">"Ama-app anemvume Yamadivayisi aeseduze angakhetha indawo ehambelanayo yamadivayisi axhunyiwe."</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"Ukufinyelela kwendawo kuvaliwe mayelana nama-app namasevisi. Indawo yedivayisi yakho isengathunyelwa kubaphenduli besimo esiphuthumayo uma ushaya ikholi noma uthumela umbhalo kwinombolo ephuthumayo."</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"Funda kabanzi Ngamasethingi wendawo"</string>
-    <string name="location_settings_tooltip_text_for_chrome" msgid="3574930966097093550">"Ukuze ushintshe ukufinyelela kwendawo, iya kokuthi Amasethingi Nokuvikeleka kanye Nobumfihlo Nezilawuli zokwemfihlo"</string>
+    <!-- no translation found for location_settings_tooltip_text_for_chrome (5781821709250544575) -->
+    <skip />
     <string name="account_settings_title" msgid="9138880127246241885">"Ama-akhawunti"</string>
     <string name="security_settings_title" msgid="6710768415432791970">"Ukuphepha"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"Ukubethela nokuqinisekisa"</string>
@@ -2018,7 +2019,6 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Ukungafani kombala"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Ukungafani okuphezulu kwenza umbhalo, izinkinobho kanye nezithonjana zivele kakhulu. Khetha ukungafani okubukeka kangcono kuwe."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Amanye ama-app angase angayisekeli yonke imibala nemibhalo yamasethingi okungafani."</string>
-    <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"Lungisa ukuthi imibala kanye nombhalo kubukeka kanjani uma kuqhathaniswa nombhala wengemuva lesikrini sakho"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"Hlola kuqala"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"U-Helen, Adam"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"Izinsuku ezi-2 ezidlule"</string>
@@ -4991,8 +4991,12 @@
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"Vala imodi yendiza ukuze usebenzise i-UWB"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"I-UWB ayitholakali endaweni yamanje"</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"Uchungechunge"</string>
-    <string name="thread_network_settings_summary" msgid="8065599651021748339">"Xhuma kumadivayisi ahambelanayo usebenzisa Uchungechunge ukuze uthole ukuhlola okulula kwekhaya elismathi"</string>
-    <string name="thread_network_settings_summary_airplane_mode" msgid="7207252895832446979">"Vala imodi yendiza ukuze usebenzise Uchungechunge"</string>
+    <!-- no translation found for thread_network_settings_main_switch_title (3859168481929323474) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_footer_title (7385600318850220927) -->
+    <skip />
+    <!-- no translation found for thread_network_settings_learn_more (8278498005848565050) -->
+    <skip />
     <string name="camera_toggle_title" msgid="8952668677727244992">"Ukufinyelela kwekhamera"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"Ukufinyelela kwemakrofoni"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Okwama-app namasevisi"</string>
